--- a/18.md
+++ b/18.md
@@ -3,6 +3,9 @@
 睡眠、触摸和爱情的重要性
 
 嗨，早上好，下面我们开始今天的内容。今天我们将讲完身心疗法，我们将会讲到睡眠，讲到触摸。然后我们将继续到一个本人绝对很喜欢的主题，就是爱情。我们会谈到人际关系。  
+
+【4个主题么？睡眠、触摸、爱情、人际关系】
+
 这个是我们上次课讲完的，我们讲了身心的联系，我们讲了运动的重要性，我们讲了正念冥想的重要性。它是如何实实在在地转化，改变我们大脑的形态，使得前额皮质的左半边相对于右半边要更为活跃。接着我们讲了呼吸的重要性和如何呼吸，如果我们能在一天中有计划地进行深呼吸，就能真正的改变我们的生活。不管是等红灯时，还是早上醒来的第一件事，还是我们进入教室时或是就现在，深呼吸，深深的腹式呼吸。让我们从或战或逃反应改变为放松反应。记住我们在本课程一开始就说过的一句话，那就是，我不会教给你们很多新的东西，这就是一个很明显的例子。你们都知道怎么深深地，正确地呼吸，你们从出生那天或出生那刻起就知道了。但多年以来，随着压力的不断升级并缺乏恢复，多年来承受着逐渐增加的压力，逐渐加快的现代生活速度，我们给自己施加了限制，我们一直承受着压力，却没人教过我们如何恢复。我们现在需要做的是逐渐去除这些限制，回到我们生来就喜欢的深度呼吸，当我们这么做时，我们扭转了或战或逃反应，并创造了一个由平常的幸福和深呼吸组成的生长螺旋，它会带来更多平常的幸福和更多的深呼吸。
 
 下一个我想谈论的主题，大家不要在课堂上应用，回去再应用。这主题是睡眠。下面是一些关于睡眠的数据。在爱迪生发明电灯泡之前，人们每24小时就平均睡10小时，每天10小时，大多是在夜里睡觉，但有时也在白天睡觉，现今平均每人在工作日期间有6.9小时的睡眠时间，周末则是7个半小时，这是全国的平均数据。至于大学生，数据则有些不同，有多少人—这样我们来举手表决，你们除了我之外有多少人晚上能睡足8小时的？好的，肯定不止这些人，没举手的可能睡着了。全国平均数据是：18岁到29岁的人中大约有4分之一的人有8小时的睡眠时间，75%的人没有足够的睡眠，有些人需要7小时的睡眠，有些人需要9小时，有些人16小时，不。平均需要睡眠时间是8小时，我们的睡眠时间都就在这个数上下波动，很少有人需要很少的睡眠，也很少有人真的需要很多的睡眠。那我们如何知道自己需要多长的睡眠呢？你什么时候自然醒？我们什么时候睡觉，什么时候疲劳？我们可以这样估计睡眠时间，大约是8小时左右。现在有些人会说“好吧，对我来说要睡8小时的话，我一天要有30小时才行，没有足够的时间去...那是一天的三分之一啊，太多了，我腾不出那么多时间”。你可以腾出那么多时间，如果你把它视作一种投资的话，如果你把它当做一件优先要做的事的话。就像是商人去谈生意说“在这笔交易上我负担不起10万美元”，你要是白送出去自然负担不起，但是你会收到每年20%投资的回报，这就不一样了，也许我可以负担得起10万，如果投资是有回报的话。睡觉也是同样的道理，这些8小时的投资有很大的回报，许多研究都表明了睡觉的重要性，和我们把它优先考虑的原因，所以让我简要地列出来几点。首先，显著增强身体的免疫系统。我是说，我们都知道当我们睡得很少，我们会或者我们在考试周结束后更容易不舒服，这当然也和压力有关，但睡眠本身，充足的睡眠增强了我们的免疫系统，精力水平。有很多理论认为睡5个小时比7个小时好，由于某些循环。是的，这些循环存在，但普遍来说，在一定程度上睡多一些更好，如果我们一天睡眠时间超过10个或者11个小时，有时可能是因为生活上碰到困难，有时可能是因为抑郁，抑郁会导致失眠或者另一个极端，睡得太多。但正如我所说，如果你一天睡10个小时，这可能意味着你需要一天睡10个小时，而不是说你抑郁了，而不是说你有什么毛病。不过看一看，看看你整个生命中，你平均需要多好睡眠时间？在某种程度上说越多的睡眠通常越好。我们讲过身体运动，当我们不运动时，我们的体重就会超出基准水平，超出天生的或者基因决定的我们的自然状态。这就是为什么越来越多不配合锻炼的节食减肥失败，对于睡眠也是同样的道理。如果我们的睡眠不充足，我们会超出我们的基准体重，实际上是相关的，不只是相关，而是因果关系，缺乏睡眠导致体重增加。如果我们尝试节食，我们又在和自己的天性作斗争，仅仅是充足的睡眠时间就能有效地改善我们的体重控制。驾驶技术，每年有平均10万起车祸是由于缺乏睡眠引起的。在美国一年有4万人受伤，1500人死亡，因为缺乏睡眠。受害人中有的人是没睡好的司机，有的是被没睡好的司机害的。在工作场所，日复一日，由于缺乏睡眠引起的事故估计造成了1000亿美元的经济损失。认知功能，无论是创造力，生产力还是记忆力，都会在我们不睡时受损，这就是为什么睡眠是如此重要的一项投资。你知道我们经常说“让我再熬两个小时学习”，然而实际上你会完成更多的学习，你会把学习材料记得更好，更有创造性，如果你得到这额外两小时的睡眠的话，投资的良好回报。
@@ -26,7 +29,7 @@
 让我来给你们看个例子，就是一些人是如何比别人更喜欢拥抱的，好的，再一次，这是我们的药方，非常简单。一周至少4次，一次至少30分钟的身体锻炼。正念冥想，如果你方便的话，每天10或15分钟，如果不方便，至少全天也要有安排地做几个深呼吸。晚上8小时的睡眠，一天至少5个，最少12个拥抱。这可能是你听说过的最有效力的心理学药方了，它能让我们自然健康状态，我们天生的或者基因决定的水平，幸福水平。
 
 让我们现在继续到另一个主题，下面是我今天想对你们说的。（音乐：Let\`s Talk About Love席琳·迪翁，让我们来谈谈爱，让我们来谈谈我们，让我们来谈谈生活，让我们来谈谈信任，让我们来谈谈爱。）好了那么咱们来谈谈爱，被谈论得最多的话题，是让人有感触的话题，到处都在谈论，从餐厅到卧室，现在就是了，然后也是最受误解的话题。人际关系，亲近的，亲密的关系，无论是和爱人还是家人，还是和亲密的灵魂伴侣，朋友，这些爱都是头号的幸福语言者。我们今天的重点会是下节课也是情侣关系，但是我们仅仅重点讨论情侣关系，因为在很多方面它是具有代表性的，它包括了其他关系中的许多东西，我们讲的重点也可以应用到亲密的友情家庭关系中去。一开始我给你们看一个电影“偷穿高跟鞋”中的片段，当卡梅隆·迪亚兹向她在电影中结婚的姐姐读了一首优美的诗。（此刻非常圣神的时刻，小姐？这不在婚礼的程序中，因为这是个惊喜，我经常给Rose惊喜，通常她讨厌那惊喜，我想，我希望她喜欢这个，这是E.E.Cummings的一首诗，献给你，“我将你的心带在身上，用我的心将它妥善包藏，天长日久也不会遗忘。无论我前往何方，都有你伴我身旁，即便我独胆成事，那也是出于爱人，你的力量。面对命运我从不恐慌，只因你就是我命运的方向。世间万物于我皆如浮云，只因你在我眼中就是天地四方。这秘密无人知晓，在我心底埋藏，它是根之根芽之芽天之天，都是生命之树所生长，这大树高于心灵的企望，也高于头脑的想象，是造化的奇迹，能够隔离参商。我将你的心带在身上，用我的心将它妥善包藏”）  
-那是什么？根之根，芽之芽？能够隔离参商？让我们试着来理解它，只是不我们已知的要多那么一点。再一次，人际关系是一种天性的需求，没有人是孤岛，没有人能脱离人际关系而生存，而成长。让我们再看一遍，我们几个月前讲过的关于极度幸福的人的研究，还记得在晚餐时Martin Seligman选择了这10%的最幸福组，最拔尖的，并研究了他们，他们发现之一，如果你还记得的话，是他们和别人一样也经历了困难，他们有时会经历焦虑、紧张，、抑郁、沮丧，但是，他们和其他人的区别，那些不是最幸福的人。是他们恢复得更快，换言之，他们有更强大的免疫系统。为何他们有更强大的免疫系统的原因之一，他们对自己经历表现与他人不同的原因之一，是因为他们有...这是他们和其余人的不同之处，他们有很强的人际关系，无论是情侣还是和灵魂伴侣，还是和家人或者以上这些都有。这是这组与人不同的一个特点，他们有亲近请，亲密的关系。这就大有不同了为什么？两个原因。首先，因为当你快乐时，你会和你亲近的真正在意的人分享快乐，那就增加了放大了你的快乐，同样也是他们的快乐，这是个双赢，当你经历艰难困苦时，拥有亲密的关系能帮助你克服困难，所以再一次，无论是从消极到零点，还是从零点到幸福，亲近的亲密关系显著地有助于变得幸福。但是人际关系中的关键是认识自己，就是知道自己的需要，因为我们每个人需要的人际关系都不一样，没有统一的药方，不可能说，一天5个拥抱然后你就更幸福了，5个密友，你知道一个或两个爱人还有...没有这样的药方，是因人而异的。  
+那是什么？根之根，芽之芽？能够隔离参商？让我们试着来理解它，只是不我们已知的要多那么一点。再一次，人际关系是一种天性的需求，没有人是孤岛，没有人能脱离人际关系而生存，而成长。让我们再看一遍，我们几个月前讲过的关于极度幸福的人的研究，还记得在晚餐时Martin Seligman选择了这10%的最幸福组，最拔尖的，并研究了他们，他们发现之一，如果你还记得的话，是他们和别人一样也经历了困难，他们有时会经历焦虑、紧张、抑郁、沮丧，但是，他们和其他人的区别，那些不是最幸福的人。是他们恢复得更快，换言之，他们有更强大的免疫系统。为何他们有更强大的免疫系统的原因之一，他们对自己经历表现与他人不同的原因之一，是因为他们有...这是他们和其余人的不同之处，他们有很强的人际关系，无论是情侣还是和灵魂伴侣，还是和家人或者以上这些都有。这是这组与人不同的一个特点，他们有亲近请，亲密的关系。这就大有不同了为什么？两个原因。首先，因为当你快乐时，你会和你亲近的真正在意的人分享快乐，那就增加了放大了你的快乐，同样也是他们的快乐，这是个双赢，当你经历艰难困苦时，拥有亲密的关系能帮助你克服困难，所以再一次，无论是从消极到零点，还是从零点到幸福，亲近的亲密关系显著地有助于变得幸福。但是人际关系中的关键是认识自己，就是知道自己的需要，因为我们每个人需要的人际关系都不一样，没有统一的药方，不可能说，一天5个拥抱然后你就更幸福了，5个密友，你知道一个或两个爱人还有...没有这样的药方，是因人而异的。  
 我还想回顾一下千层面定律，还记得幸福书里的千层面定律，那就是我们都需要...比方说，我很爱我的家人，家人对我来说是世界上最重要的。但是，那并不意味着我愿意一天花8个或者10个小时和家人在一起。你知道我还需要独处的时间配额，我需要练瑜伽，我需要锻炼、写作、教学，那并不意味着我的家人对我来说就不重要了。或者说我喜欢写作，我确实喜欢，我一天写3小时，不能再长了，为什么那是千层面定律...如果你们还记得，千层面是我最爱的食物，我每次回家，我妈妈总给我做千层面，但那并不是说我需要每天整天都吃千层面，你知道一周吃5顿对我来说就够了，或者一周吃一顿。但是你需要找到自己的配额，人际关系也是一样。问问自己，每天和别人相处多少小时我就觉得愉快，觉得和别人相处是一种享受，决定这个合适时间的因素就是看你内向还是外向，我们都有一个相对于最优水平而言的心理基准水平，让我来画个图，这是所谓的最优激励水平，在认知学上说，激励的最优水平，这是，比如说是我们的最优激励水平，我们生来就在这附近，有些人高，有些有人低，极少有人正好在这条线上，内向的人有更高的激励水平，更高的先天激励水平，这是内向的人，相对于最优水平而言，外向的人有较低的激励水平，现在我们都身上，或者精神上，认知上并身体上，寻求体验的最优激励水平，因为那是最方便的，那时候我们在最佳状态，那时候我们心情更愉快。内向的人的天生自然状态是高于最优激励水平的，所以他们实际上需要降低刺激水平，所以他们喜欢自己单独呆着。与之相反，外向的人有着较低的激励水平，这个水平没有他们达到最优水平时那么愉快，于是他们出门去参加派对，那里有很多刺激，有很多事发生，有很多为了达到自己最优水平的人。这就是为什么普遍来说...酒精起什么作用？酒精降低我们的激励水平，这就是为什么内向的人常常需要在他们跳舞之前喝杯酒或喝瓶酒，因为当着其他人的面跳舞会刺激水平上升，所以酒精的作用是降低他们的刺激水平，然后跳舞就容易接受了。与之相反，外向的人需要咖啡，咖啡是保持清醒的刺激物，因为咖啡让他们上升到自己的最优激励水平。再一次，我给了你们一个梗慨，再一次，自lssac后数十年里有很多关于内向和外向的研究，顺便说下，这不是意味着我们不能...用Brian Little的话说，我们的举止不能脱离本性，就是说一个内向的人举止可能像外向的人。我站在这里，我是个内向的人，顺便说下这是心...我们生来就是这个状态，这是天生的，我生来就是内向的，但当我站在教室前唱着优美的歌曲，我的行为像一个外向的人，但是当我们的举止脱离本性时，明白这样通常会让我们哀弱这点很重要，它会带走我们的精力，这对我们来说很难，因为我们在假装，所以如果我在这，当我上课时，我会变得更兴奋，离我的最优激励水平更远，这会消耗精力，这就是为什么内向的人在表现得像外向的人之后，无论是参加派对还是讲课。都需要Brian Little所说的恢复龛，恢复龛，一个恢复精力的地方，在那个地方，人们可以和人一对一相处，也可以给自己一点时间独处，恢复。记住这个问题不是压力，这个问题不是压力，而是我们没有恢复，内向的人需要恢复，有时是靠自己，有时需要一对一。比如说我的生活，恢复的形式是坐办公室，让我一连4个小时面对学生更容易，这是一种恢复的形式，如果我只是上课，只是站在听众前面,那最终会导致过度工作，会导致我毫无生气。外向的人也是一样，如果你是个外向的人，有时你需要做点内向的人的事情，比如说你需要为了考试学习，你是可以和很多人一起学习备考，但可能效果并没有那么好，所以你自己一个人或者和另一个一起学，而在那之后你需要的就是一个恢复龛，因为对一个外向的人来说，远离其最优激励水平是消耗精力的，你需要一个恢复龛，恢复龛在哪?我需要和朋友出去参加派对，这对他们来说就是一个恢复龛。所以再一次，认识你自己，知道你自己人际关系的需求是什么，不是说你的行为不能脱离本性。你可以，但同时你必须要有一个正式的恢复，一个与你本性相对应的恢复龛，不管你是内向的还是外向的。总而言之，你需要的人际关系数量取决于你个人的独特的需要，你想和别人在一起相处的时间，因人而异，这里无分好坏。一些人喜欢每天和朋友相处10小时，那些特别的人。其他人则喜欢一对一，亲密的时间每天就需要2到3小时。这里没有什么好或不好，并不意味着你对别人的爱就冷淡了，也不意味着你不需要亲密的关系，如果你是前一种或者后一种的人。两种人都需要亲密的关系，和灵魂伴侣，情侣，家人，都可以，都是一种需要.  
 David Myers说：“几乎没有什么能比一段和好友之间亲密的，悉心培育的，公平的，亲近的，长达一生的相伴更能语言幸福了”。关于异性关系所做的研究要比同性关系多。但是，过去几年，特别是经过华盛顿大学John Gottman的研究工作，他可以说是这一领域的领先专家。他在同性关系上做了更多的研究，他们的发现...非常相似的结果，但略有不同，我们会讲讲这些有趣的...因为它们是我们没见到过的不同，可能今天不讲，但下节课会讲。所以当我谈到关系时，我说的是关系，而那位David Myers说的是长达一生的伴侣，浪漫的关系同性或者异性。关于关系有趣的事情是，每个人都能从中受益，但如我之前一次提到的那样，男人受益更多，为什么他们受益更多？因为首先，通常男人有可以分享事情的人。而女人，通常更可能...和特定的女性朋友谈论特定的话题，分享快乐和悲伤的女性朋友。但是，两种性别的人不管是异性恋还是同性恋都能从亲密的关系中获益。  
 我来放一个前段的视频片段，关于婚姻的，“人人都爱雷蒙德”的片段，（这就是婚姻，你早上一睁眼，她在那，你夜晚回家，她在那，你吃饭，她在那。你...你睡觉，她在那。我知道这听起来很恐怖，但是不是，不是。如果你...如果你找到了合适的人，这样结婚就很好，很好，真的真的很好。我想要一分钟时间来反驳。）  
