--- a/12.md
+++ b/12.md
@@ -1,30 +1,80 @@
 **\[第12集\] 写日记**
 
-学生：“早上好，我叫Dana，我是大一的学生。我想跟你们说说，下周会在哈佛进行的一个社会项目。我爷爷是二战大屠杀的幸存者，他将要来哈佛讲述他的亲身经历。我想这会是一次非常特别的机会，让我们听到历史上一个感人的故事。他在其他大学和联合国做过演讲，他的故事挺扣人心弦的。演讲会于七点三十在纪念堂举行，下周的这一天3月18日，周二。想了解更详细的信息，请查看Facebook网页“在奥斯威辛集中营中幸存：一位幸存者的故事”。你们可以谷歌……或在哈佛的网站上查找二战大屠杀，希望大家能够抽时间来听听。如果有问题请联系我，我叫Dana，我会随时回复。我是这活动的主办人。谢谢大家，谢谢Tal。”
+大家早上好。今天，我们会先讲完**改变**，**总结一下ABC，也就是影响、行为和认知**。然后继续讲另一个相关课题，设定目标，这将是最后一个在放假前我要讲的课题。上次讲完了急剧变化，由探索而得的经验引起的急剧变化，这种经验来自顿悟感和洞察力，我们讲过五个阶段，之后有些学生联系我说：“并不是很顺利”。没错，这是一个理论，只是一个大纲，你写作的时候，当你思考……或设定课程，或是写论文时。
 
-大家早上好。今天，我们会先讲完"改变"，总结一下ABC，也就是影响、行为和认知。然后继续讲另一个相关课题，设定目标，这将是最后一个在放假前我要讲的课题。上次讲完了急剧变化，由探索而得的经验引起的急剧变化，这种经验来自顿悟感和洞察力，我们讲过五个阶段，之后有些学生联系我说：“并不是很顺利”。没错，这是一个理论，只是一个大纲，你写作的时候，当你思考……或设定课程，或是写论文时。
+你们当中有人在写论文，你们常犯的错误是将它们混淆了，通常你们会先准备，然后写一些，之后休息一下，会有一些顿悟，再开始作更多准备等等。这只是一个轮廓，某些角度来看是很有用的。
 
-你们当中有人在写论文，你们常犯的错误是将它们混淆了，通常你们会先准备，然后写一些，之后休息一下，会有一些顿悟，再开始作更多准备等等。这只是一个轮廓，某些角度来看是很有用的。首先，我们光看着它就能明白，没有捷径，历史上所有的艺术家、科学家、商界名人都不是凭空出世的；他们首先得成为各自领域的专家，他们努力工作，将自己沉浸在知识里。这是你们首先要记住的一点，没有捷径，我们得先付出努力，还记得成功的秘诀吗？不光是思考、想象和相信，必须要有努力和热情这两点要素。所有的成功人士，再次提到，做好的自助书籍是自传，好的自传会教你如何成功，而不是那么简单的“五步”。第二个重要因素，比投入到准备过程……更重要的是，空闲时间的重要性。今天的领导人所缺的……他们所缺的其中一样东西是时间，时间是他们最需要的。有空闲时间去筹划、反思，或只是坐在浴缸里思考、熟虑、发呆的时间段。记得J.P.Morgan说过，那是要有所顿悟或灵感出现为前提的。这些灵感来自一夜好觉之后，或是充分休息一段时间之后，或是在洗澡过程中。下一个重要因素是，这个模型的组成部分是评估部分。人有很多好的想法，但极少数是可以有好成果，最终成为经商的好点子或成为科学论文或书籍的好构思，或其他任何有作为的东西，这时候就需要评估，需要详细筹备，这也就是创作的必经阶段。
+> 我的笔记
+>
+> 1. 没有捷径
+> 2. 空闲时间很重要
+> 3. 评估
+>
+> 所以总结起来：ABC 也就是影响\(情感\) 行为和认知。
 
-真的需要百分之一的灵感，百分之九十九的汗水，没**捷径**可言。所以总结起来：ABC 也就是影响\(情感\) 行为和认知。我想谈一个小小的技巧，一个简单的方法，就是把有深刻影响的事情记录下来。请大家举起手，多少人有长期写日记的习惯？好，这么多人有这个习惯是件好事。从这个课程和大家之前接触过的研究中知道，改变是困难的，有的项目持续五年了还是没有进展，通常投入的资金是数百万，数十亿。大概每年投入巨额资金来做研究，才能对各行业和机构有所改变，很多的资金投入都浪费了，说明改变有多难而日记呢？
+首先，我们光看着它就能明白，没有捷径，历史上所有的艺术家、科学家、商界名人都不是凭空出世的；他们首先得成为各自领域的专家，他们努力工作，将自己沉浸在知识里。这是你们首先要记住的一点，没有捷径，我们得先付出努力，还记得成功的秘诀吗？
 
-有实质的研究结果证明它的作用很大，我跟你们分享一下某项调查。这项调查是由……那些将日志带进科学领域的人来做的。有些像Ira Progoff这样的人，长期以来一直在讨论写日记的作用，但却是德州大学的Jamie Pennebaker将这个想法带进了科学领域，并真正意义上研究它。他是这么做的，他选了一些参与者，并让他们做以下的事情：连续四天，每天都用15分钟的时间，就15分钟，来写下最难忘的经历。他们知道其实没人会看的，就算被人看到，这些日记也是匿名的，绝对保密，所以完全可以看成是他们的私人日记。
+> 不光是思考、想象和相信，必须要有努力和热情这两点要素。
 
-以下就是他们得到的指示，有点长，但值得一读“连续写下你一生中最难过，或最痛苦的经历”。在日记中，我希望你能谈谈……你对这经历的最深刻的想法和感受。写什么都行，但不管你选什么，都必须是对你有着深刻影响的。最好是一些……你从未怎么跟别人讲过的事，其实挺难的，因为敞开了心扉，去触碰那些你内心深处的感情和思想，换句话说，就是写下你的经历和以前的感想，以及现在对它的看法如何。最后，你可以每次都写不同的痛苦经历，也可以整个研究过程都写同一个经历；每次你可以选择任何想写的痛苦经历，很简单的做法，很直接。
+所有的成功人士，再次提到，最好的自助书籍是自传，好的自传会教你如何成功，而不是那么简单的“五步”。
 
-如果有留心，就知道当中包含了ABC三个要素。它包含了“写出发生的事”也就是行为。写下你的深刻感受，受到的影响以及你的情感，写下你的想法并分析它。这样，日记里就包含了ABC三个因素。
+第二个重要因素，比投入到准备过程更重要的是，**空闲时间的重要性**。今天的领导人所缺的……他们所缺的其中一样东西是时间，时间是他们最需要的。有空闲时间去筹划、反思，或只是坐在浴缸里思考、熟虑、发呆的时间段。记得J.P.Morgan说过，那是要有所顿悟或灵感出现为前提的。这些灵感来自一夜好觉之后，或是充分休息一段时间之后，或是在洗澡过程中。
 
-他做了这项研究后，最初结果出来了，他首先看到的是焦虑水平，因此看到结果时，他失望了。他考虑要不要停止这项研究，因为这就是他的研究所得。大家看这幅图，这是焦虑水平，这是时间。他有一个对照组，对照组的成员，只是写下他们想写的东西。随着时间推移，焦虑水平没有改。从这里开始，一条直线过来，而干预组、实验组的成员，经过四天，写下他们最痛苦……最难过的经历后，他们的起点一样。当初分组是随机分的，他们的焦虑水平竟呈现上升趋势，每天这么写，在这四天内，他们的焦虑水平上升了。到了这个位置时，他考虑终止研究，因为非常失望，因为他自己觉得……写日记对他有帮助，而也有其他人说过这一观点。四天之后，从第五天开始，尤其是第六天、第七天之后，奇怪的事发生了，他们的焦虑水平降低了，达到了原来的水平，还持续下降。最重要的是，在原来的水平之下保持稳定，在原来的焦虑水平之下保持稳定。他密切留意着这些参加者，一段很长的时间，长达一年；四次15分钟，足足一小时，时间很短。效果是持续的，想想，我们之前也知道。
+下一个重要因素是，这个模型的组成部分是评估部分。人有很多好的想法，但极少数是可以有好成果，最终成为经商的好点子或成为科学论文或书籍的好构思，或其他任何有作为的东西，这时候就需要评估，需要详细筹备，这也就是创作的必经阶段。
 
-有时候，简单的干预是很有效果的。想想我上周说过的害羞研究，12次，每次12分钟，让男士们与对他们……有好感的女士们独处。这些害羞的异性恋男士发生了很大的变化，所以改变其实可以发生在极短的时间内，关键是我们要知道如何干预。而日记就是其中的一种干预方式，我不会要你们写这个作业，因为太私人了，我觉得不该布置给你们，但我强烈推荐你们试一下，严格按照Pennebaker的指示，不会占很长时间，连续四天都做，每次15到20分钟，想到什么写什么，一段时间之后可以降低你们的焦虑感。
+真的需要百分之一的灵感，百分之九十九的汗水，没**捷径**可言。所以总结起来：ABC 也就是影响\(情感\) 行为和认知。
+
+> 我想谈一个小小的技巧，一个简单的方法，就是把有深刻影响的事情记录下来。
+
+请大家举起手，多少人有长期写日记的习惯？好，这么多人有这个习惯是件好事。从这个课程和大家之前接触过的研究中知道，改变是困难的，有的项目持续五年了还是没有进展，通常投入的资金是数百万，数十亿。大概每年投入巨额资金来做研究，才能对各行业和机构有所改变，很多的资金投入都浪费了，说明改变有多难而日记呢？
+
+有实质的研究结果证明它的作用很大，我跟你们分享一下某项调查。这项调查是由那些将日志带进科学领域的人来做的。有些像Ira Progoff这样的人，长期以来一直在讨论写日记的作用，但却是德州大学的Jamie Pennebaker将这个想法带进了科学领域，并真正意义上研究它。他是这么做的，他选了一些参与者，并让他们做以下的事情：连续四天，每天都用15分钟的时间，就15分钟，来写下最难忘的经历。他们知道其实没人会看的，就算被人看到，这些日记也是匿名的，绝对保密，所以完全可以看成是他们的私人日记。
+
+> 我的笔记：
+>
+> 写印象深刻的日记
+
+以下就是他们得到的指示，有点长，但值得一读。
+
+**“连续写下你一生中最难过，或最痛苦的经历”**。在日记中，我希望你能谈谈你对这经历的最深刻的想法和感受。
+
+写什么都行，但不管你选什么，都必须是对你有着深刻影响的。
+
+最好是一些你从未怎么跟别人讲过的事，其实挺难的，因为敞开了心扉，去触碰那些你内心深处的感情和思想，换句话说，就是写下你的经历和以前的感想，以及现在对它的看法如何。最后，你可以每次都写不同的痛苦经历，也可以整个研究过程都写同一个经历；每次你可以选择任何想写的痛苦经历，很简单的做法，很直接。
+
+如果有留心，就知道当中包含了ABC三个要素。
+
+它包含了“写出发生的事”也就是行为。
+
+写下你的深刻感受，受到的影响以及你的情感，
+
+写下你的想法并分析它。
+
+这样，日记里就包含了ABC三个因素。
+
+> ABC理论
+>
+> 情绪ABC理论是由美国心理学家埃利斯创建的。就是认为激发事件A(activating event 的第一个英文字母）只是引发情绪和行为后果C(consequence的第一个英文字母）的间接原因，而引起C的直接原因则是个体对激发事件A的认知和评价而产生的信念B(belief的第一个英文字母），即人的消极情绪和行为障碍结果(C)，不是由于某一激发事件（A)直接引发的，而是由于经受这一事件的个体对它不正确的认知和评价所产生的错误信念（B)所直接引起。错误信念也称为非理性信念。
+
+他做了这项研究后，最初结果出来了，他首先看到的是焦虑水平，因此看到结果时，他失望了。他考虑要不要停止这项研究，因为这就是他的研究所得。大家看这幅图，这是焦虑水平，这是时间。
+
+他有一个对照组，对照组的成员，只是写下他们想写的东西。随着时间推移，焦虑水平没有改。从这里开始，一条直线过来，而干预组、实验组的成员，经过四天，写下他们最痛苦最难过的经历后，他们的起点一样。当初分组是随机分的，他们的焦虑水平竟呈现上升趋势，每天这么写，在这四天内，他们的焦虑水平上升了。到了这个位置时，他考虑终止研究，因为非常失望，因为他自己觉得……写日记对他有帮助，而也有其他人说过这一观点。四天之后，从第五天开始，尤其是第六天、第七天之后，奇怪的事发生了，他们的焦虑水平降低了，达到了原来的水平，还持续下降。最重要的是，在原来的水平之下保持稳定，在原来的焦虑水平之下保持稳定。他密切留意着这些参加者，一段很长的时间，长达一年；四次15分钟，足足一小时，时间很短。效果是持续的，想想，我们之前也知道。
+
+> 有时候，简单的干预是很有效果的。
+
+想想我上周说过的害羞研究，12次，每次12分钟，让男士们与对他们有好感的女士们独处。这些害羞的异性恋男士发生了很大的变化，
+
+> 所以改变其实可以发生在极短的时间内，关键是我们要知道如何干预。
+
+而日记就是其中的一种干预方式，我不会要你们写这个作业，因为太私人了，我觉得不该布置给你们，但我强烈推荐你们试一下，严格按照Pennebaker的指示，不会占很长时间，连续四天都做，每次15到20分钟，想到什么写什么，一段时间之后可以降低你们的焦虑感。
 
 这项研究的其他结果，如果你想了解更多，他有一本很棒的书，叫《开放》，Jamie Pennebaker的《开放》。他们变得更健康，一年过后，他们回去看医生的人数，远比对照组的人少。就是说，这项研究增强了他们的免疫系统，不光是他们的心理免疫系统，同时还有他们的身体免疫系统。总得来说他们心情好了，比以前更快乐、更乐观、更积极。在他们记下最深刻伤痛后，他们变得更外向，不那么压抑和忧郁了，为什么会这样呢？我们说过积极情感和痛苦情感都来自同一个输送通道，如果我们抑制着某些事情或停止一些痛苦的事，我们常常会间接地，同时无意中抑制一些积极的情感，只要他们随时敞开心胸，让这些情绪尽情流露，那他们其实是打开了一条闭塞的通道，一条各种情绪……包括痛苦和积极情绪流动的通道。他们也能体验到更高层次的快乐，他们会更阳光、更慷慨，就像你做感恩练习时所得的结果一样，非常相似。
 
 有趣的是，会有性别差异，男女都从中受益，但男士比女士受益更多。试想一下，为什么？仔细想想，不无道理，受益的女士，状况大大改善，但男士受益更多，为什么？一般来说，这是千遍一律的说法，但一般来说，女士敞开得更多，她们和女伴们谈得更多，她们有密友，并对她们倾诉一切。而在今天的文化中，男士还是比较保守，因为找人倾诉有点没面子，准许自己为人，不是一件很酷的事，尤其是有其他人在旁时。因此，在生活中，女士们，但尽管如此，拥有强大支持的女士，仍能从这项练习中获益。这让我想起了另一项研究的结果，我几个月前提到过的。在课程开始时，提到一般来说，女人，我指通常情况，或者说男人，在婚姻中比女人受益更多。类似的原因，因为女士们原来就有支持系统，而男人，通常这是他们第一次遇到一个，让他们觉得能安心倾诉的人。同样，尽管男女都在长期的恋爱关系中获益，但还是男士受益比女士多，他发现了因同一个原因而产生的性别差异……存在于不同文化当中，这项研究分别在中国、日本、墨西哥和阿根廷做过，当然也包括美国、欧洲等不同文化。不同文化的人们都从该项研究受益。
 
-还有另一项研究，用的是相反的方法。Laura King是Pennebaker的学生，用相反的方法来做这项研究。她说：“我们来研究一下……看当人们……写下最快乐的经历时会有怎样的结果”。她的做法明确地根据Abraham Maslow关于巅峰经验的研究。以下就是做法，三次15分钟，连续三天，总共45分钟。“想出生命中最精彩的经历……或多次美好的经历，快乐、兴奋的时刻，或坠入爱河极度欢喜的时刻，发现一本好书或好画或突然灵感乍现”。选择其中一个这样的时刻，想象自己正经历这一时刻，沉浸在所有与这一经历有关的……感受和情感中。尽量详细地写下这次经历尽量写下感受和想法，及当时产生的情感，尽量尝试重新经历那些情感。这个做法和Pennebaker的做法相反，结果呢？完全一样，那些写下他们巅峰经验的人，写下最快乐经历的人，去看医生的次数少了。就是说，这个做法增强了他们的身体免疫系统，让他们体验更多快乐，不论心理还是身体上都得到同样的效果。
+还有另一项研究，用的是相反的方法。Laura King是Pennebaker的学生，用相反的方法来做这项研究。她说：“我们来研究一下，看当人们写下最快乐的经历时会有怎样的结果”。她的做法明确地根据Abraham Maslow关于巅峰经验的研究。以下就是做法，三次15分钟，连续三天，总共45分钟。“想出生命中最精彩的经历或多次美好的经历，快乐、兴奋的时刻，或坠入爱河极度欢喜的时刻，发现一本好书或好画或突然灵感乍现”。选择其中一个这样的时刻，想象自己正经历这一时刻，沉浸在所有与这一经历有关的感受和情感中。尽量详细地写下这次经历尽量写下感受和想法，及当时产生的情感，尽量尝试重新经历那些情感。这个做法和Pennebaker的做法相反，结果呢？完全一样，那些写下他们巅峰经验的人，写下最快乐经历的人，去看医生的次数少了。就是说，这个做法增强了他们的身体免疫系统，让他们体验更多快乐，不论心理还是身体上都得到同样的效果。
 
-现在来看，你们有些人可能会想“那Lyubomirsky的研究呢”，还记得Lyubomirsky的研究吗？那项研究表示，当你写下积极情感时，其实你感觉更糟；而写下负面情感，都会如Pennebaker所说，感觉会好些；不同之处在于Laura King的做法主要是……描述和重新体验，重现你的经历，而不是分析“怎么会发生这种情况”，而是它的发生过程，就是重现。当做法……而Lyubomirsky的研究是分析这种经历，为什么会发生，你为什么会遇上之类的？这就是为什么随着时间推移，会产生负面的效果，但只是重现经历，只写下这次经历有多美好，重新体验当时的情感，实际上会让你受益。
+现在来看，你们有些人可能会想“那Lyubomirsky的研究呢”，还记得Lyubomirsky的研究吗？那项研究表示，当你写下积极情感时，其实你感觉更糟；而写下负面情感，都会如Pennebaker所说，感觉会好些；不同之处在于Laura King的做法主要是**描述和重新体验，重现你的经历，而不是分析“怎么会发生这种情况”**，而是它的发生过程，就是重现。当做法……而Lyubomirsky的研究是分析这种经历，为什么会发生，你为什么会遇上之类的？这就是为什么随着时间推移，会产生负面的效果，但只是重现经历，只写下这次经历有多美好，重新体验当时的情感，实际上会让你受益。
 
 有趣的问题是为什么，为什么写日记能产生如此显著的好处？我们来理解一下这个过程，当中的原理，现在有几件事情在这里起作用。例如你带着积极情感，在回想其中一次经历，你其实是在增强神经通路；你再次重现，想象它，让它像重新发生一样，就像你面前有条河。记得两周前的类推法吗？你面前有条河，流过的水越多，它就变得越宽阔，然后越来越多水流进去。这是变化的本质，自我实现。因此，为什么写下，尤其是痛苦情感，但也不只是痛苦情感，之所以有所帮助是因为紧张感。我们之前讲过Daniel Wegner的“反语处理”而他谈到……当我们抑制非自然现象时，通常会适得其反，比如想像一头粉红色的大象，或抑制痛苦的情感。当我们准许自己为人，我们都倾向于释放感情，放开心胸，这就是治疗产生作用的原因，就是为什么和朋友分享，与人倾诉以及写日记能有所帮助，这就是抑制或压抑的概念。
 
