--- a/16.md
+++ b/16.md
@@ -1,21 +1,28 @@
 **\[第16集\] 享受过程**  
-今天有人有消息要宣布吗？没有好的，早上好。
 
-我们今天要把完美主义讲完，然后开始讲精神肉体。这个学期对我来说挺不错的，没有什么东西让我后悔做过，不过下次我还想挑战别的。教这门课时，我现在知道了，应该更早讲精神肉体的，因为这个话题十分重要，它是如此根本而且基础，因此当我意识到，在这个学期很早的时候就意识到，我应该早点讲，我那时就开始停止介绍身体锻炼，开始讲“念”的概念，从较低一点的层次来介绍它。今天，在一两个月之后，我们要再讲讲精神和肉体的联系，身体的健康，首先我们先把完美主义讲完。
+我们今天要把完美主义讲完，然后开始讲精神肉体。
 
-[完美主义----开始]
+这个学期对我来说挺不错的，没有什么东西让我后悔做过，不过下次我还想挑战别的。教这门课时，我现在知道了，应该更早讲精神肉体的，因为这个话题十分重要，它是如此根本而且基础，因此当我意识到，在这个学期很早的时候就意识到，我应该早点讲，我那时就开始停止介绍身体锻炼，开始讲“念”的概念，从较低一点的层次来介绍它。今天，在一两个月之后，我们要再讲讲精神和肉体的联系，身体的健康，首先我们先把完美主义讲完。
 
-上节课我们讲到了两个模型，完美主义的基模，一条从A到B的直线，以及追求卓越的基模，更像是蜿蜒曲折的螺旋上升。有些人昨天在办公时间来问我：“区别到底在哪里？”我们可以用无意义追逐目标的人来类化，还记得那个72岁的人吗？他达到了很高的地位，管理着世界的中心，在承受了一生的压力，不停地追逐到达B点，而不是享受当下，享受旅途之后被告知：退休的时候到了。
+**[完美主义----开始]**
 
-我问你们一个简单的问题：“你想要怎样的生活？”那么另一种模型是怎样的呢？积极的模型是怎样的？
+上节课我们讲到了两个模型，完美主义的基模，一条从A到B的直线，以及追求卓越的基模，更像是蜿蜒曲折的螺旋上升。
 
-积极的模型从外表上看来似乎一摸一样，可能也是一个充满雄心壮志的人，极度勤奋刻苦的人，可能是个投资银行家或者是个医生，或者律师，老师，或者在流浪者之家工作。从外表上看可能完全一样，但其内在则是迥然相异。怎么个迥然相异法呢？区别在于这个追求卓越的人，也许同样充满雄心，用同样的目标，也可能达到了同样的目标，**然而这个人同时享受这个旅程。这就是区别所在**，是的。他或她会进入名校，进入他们非常想进的学校。在学校里他们非常勤奋刻苦，但同时他们也知道，他们几乎可以，不是完全，但几乎可以，享受他们再学校的所有时光，同样的起伏坎坷，同样的兴衰变迁，但他们享受这个过程，然后获得他们想要的工作，或者他们想要的工作之一，然后继续努力工作，充满雄心壮志，每周工作80个小时，然而这个人同样享受整个过程。然后他们享受下一个旅途，和别人合作。成为别人的搭档，当上营销总监之类的。唯一的区别就在于他们享受这个过程。
+有些人昨天在办公时间来问我：“区别到底在哪里？”我们可以用无意义追逐目标的人来类化，还记得那个72岁的人吗？他达到了很高的地位，管理着世界的中心，在承受了一生的压力，不停地追逐到达B点，而不是享受当下，享受旅途之后被告知：退休的时候到了。
 
-我还可以举出一些实例，其中之一就是我的前室友，他是个投资银行家，我们一起上大学，也是96届的，毕业之后，由于其经济学的专业，给一个著名的对冲基金工作。之后他就回到哈佛获得法律博士和工商管理硕士的双学位，学业非常优秀，之后就获得了所有他想要的机会。他又选择了另一家对冲基金，之后他又自立门户和一些朋友一起开了一家公司，当我和他谈起投资银行时，我对此了解很少，我对投资银行表现得很兴奋，因为他的兴奋能感染我，他每天都期待着工作，他工作的时间也很长，他就是一个追求卓越的例子。虽然从表面上看就和我之前描述的形象一模一样，因此不是我们要是去雄心壮志，也不是变得没有竞争力，如果那能让你快乐的话，这只是让你学会享受过程，朝着你认为有意义的目的地所迈出的步子才是最重要的。
+我问你们一个简单的问题：“你想要怎样的生活？”
+
+那么另一种模型是怎样的呢？积极的模型是怎样的？
+
+积极的模型从外表上看来似乎一摸一样，可能也是一个充满雄心壮志的人，极度勤奋刻苦的人，可能是个投资银行家或者是个医生，或者律师，老师，或者在流浪者之家工作。
+
+从外表上看可能完全一样，但其内在则是迥然相异。怎么个迥然相异法呢？区别在于这个追求卓越的人，也许同样充满雄心，用同样的目标，也可能达到了同样的目标，**<u>然而这个人同时享受这个旅程。这就是区别所在</u>**，是的。他或她会进入名校，进入他们非常想进的学校。在学校里他们非常勤奋刻苦，但同时他们也知道，他们几乎可以，不是完全，但几乎可以，享受他们再学校的所有时光，同样的起伏坎坷，同样的兴衰变迁，但他们享受这个过程，然后获得他们想要的工作，或者他们想要的工作之一，然后继续努力工作，充满雄心壮志，每周工作80个小时，然而这个人同样享受整个过程。然后他们享受下一个旅途，和别人合作。成为别人的搭档，当上营销总监之类的。唯一的区别就在于他们享受这个过程。
+
+我还可以举出一些实例，其中之一就是我的前室友，他是个投资银行家，我们一起上大学，也是96届的，毕业之后，由于其经济学的专业，给一个著名的对冲基金工作。之后他就回到哈佛获得法律博士和工商管理硕士的双学位，学业非常优秀，之后就获得了所有他想要的机会。他又选择了另一家对冲基金，之后他又自立门户和一些朋友一起开了一家公司，当我和他谈起投资银行时，我对此了解很少，我对投资银行表现得很兴奋，因为他的兴奋能感染我，他每天都期待着工作，他工作的时间也很长，他就是一个追求卓越的例子。虽然从表面上看就和我之前描述的形象一模一样，因此不是我们要是去雄心壮志，也不是变得没有竞争力，如果那能让你快乐的话，这只是让你学会享受过程，<u>朝着你认为有意义的目的地所迈出的步子才是最重要的。</u>
 
 而问题在于“我们如何克服完美主义这个解不开的结呢？”我们如何克服活在未来中的感觉，因为害怕失败而害怕当下的感觉？我讲了一些方法：
 
-首先是认识它—----认识到我们想改变什么，我们想保持什么。还记得Ellen Langer的研究吗？关于更确切地了解我到底想改变什么。因为长久以来，我都是个完美主义者，因为总是想着完美，总是想着成功，我的潜意识让我没法摆脱完美主义，因为我会认为那就意味着把宝宝和洗澡水一起冲走了，也就是成功被冲走了。但现在我更确切地了解了完美主义，它就是一种对失败的无法抑制的恐惧。我明白了我仍然可以充满抱负而无需放弃成功，同时享受这个过程，这是更好的理解，这样我就能继续前进，因此第一步就是认识。
+**1. 首先是认识它**—----<u>认识到我们想改变什么，我们想保持什么。</u>还记得Ellen Langer的研究吗？关于更确切地了解我到底想改变什么。因为长久以来，我都是个完美主义者，因为总是想着完美，总是想着成功，我的潜意识让我没法摆脱完美主义，因为我会认为那就意味着把宝宝和洗澡水一起冲走了，也就是成功被冲走了。但现在我更确切地了解了完美主义，它就是一种对失败的无法抑制的恐惧。我明白了我仍然可以充满抱负而无需放弃成功，同时享受这个过程，这是更好的理解，这样我就能继续前进，因此第一步就是认识。
 
 在我们获得了认识之后，就是Dweck关于工作回报的概念，记住Carol Dweck能够在短短几个小时内，就改变学生和成人的思维模式，有时候，这些思维模式在他们非常小的时候就已经奠定了，思维模式是固定的，还是可塑的，Carol Dweck通过教他们可塑性，神经的可塑性，我们的大脑是时刻在变化的，通过教他们关注过程，关注所付出的努力，而不是结果或者最后的成就，从而改变他们的思维模式。我们自己也可以关注我们付出的努力，关注过程本身，不管它是失败还是成功，主动地去接受，它将永远是我们的一部分。完美主义者经常会做的一件事，当他们意识到自己是完美主义者时，这让他们很难受：他们就用完美主义的方式来克服完美主义。也就是说，我会成为一个完美的追求卓越的人，这不好起作用的，只是更进一步的完美主义。但主动的接受意味着：“好吧，我仍旧是个完美主义者，我可能永远都会有这方面的性格，这没关系，没有关系。”佛教徒会说的一句话是：通常情况下，我们面临的最大挑战，Karen Horney会称之为“神经官能症”，不管是完美主义，对失败的恐惧，还是时不时出现的愤怒，焦虑。不管我们的问题是什么，佛教徒很巧妙地重新定义了它；“我们要将其视为一种工具，一种成长的工具，一种了解自己的方式，使我们深入挖掘自己，然后得以成长。”要这样看它，这是个成长的机会，了解自我，反省自身的机会，能够更设身处地为别人着想的机会，无聊它是什么，将其视为一种工具，接受它，然后行动。
 
@@ -25,17 +32,21 @@
 
 这是我从Samuel Coleridge那里学来的方法，一个英国的哲学家，活跃于18世纪末19世纪初，影响了爱默生的哲学家之一，Coleridge本身是个完美主义者，后来丘吉尔说完美主义，“就是瘫痪”，他在写作时就经历了这样的“瘫痪”，写作是他生命中最重要的一件事，但他就是没法写好，因为他很害怕写不出那终极的文章，或者终极的诗，所以他所做的是，他说“在我生命的结尾，我会写出我的巨著，在那之前，一切都只是草稿”这让他得到解放，因为他不再焦虑了，他再也不用想着写巨著，而同时，他写出了无数优美的诗篇—----有些是英语中最美的文字，以及许多非常强有力的，具有影响的，结构精妙的文章。而他们都只是“草稿”，这样就没有压力了，这给了我很大的帮助。当我想到这个时，我说“好吧，看看完美主义，对我影响最深的一个领域吧，因为这个领域对我很重要，就是教学”我就对自己说“好吧”，这是大约十年前的事了，我说“二十年后，我会在名列前茅的学院中任教，能开很棒的学术报告和研讨会，在那之前一切都只是草稿，在那之前，一切都只是准备”这真的起作用了，我现在知道这是个心理游戏。我知道我是在骗自己，因为12年后，等目标要到了的时候，20年到了的时候，我会再定一个20年后的计划来解放我自己，这样我才能享受当下，这样我才能享受过程，而不是执着于要变得完美，毫无半点瑕疵，这是永远无法达到的。
 
-因此制定一个终极目标可以让你解放，这是铂金法则。黄金法则就是“已所不欲勿施于人”或者说“己所欲方施于人”，这是当今很多道德体系和宗教信仰的基础，铂金法则就是取自黄金法则，再对其进行小小的修饰，它说的是“人所不欲勿施于己”或者说“人所欲方施于己”，如果你的一个好朋友，你非常在乎的一个人，或者家庭成员失败了，没做好，你会怎样对待这个人，你会排斥这个人吗？“你考试只得了个B”或者“你竟然没赢得比赛”你会这样对待他们吗？还是你会拥抱他们？你们会因此少爱他们一点吗？当然不会，那么为什么我们要将这些不现实的，毫无共鸣的标准强加给我们自己呢？吹喇叭那个，当他开始大量接触西方文化时，被一样东西困扰了，就是我们用的一个词：同情，同情这个词，在藏语中叫“tsewe”拼为“t-s-e-w-e”这个词在藏语中的意思，即是同情他人也是同情自己，所以他完全被英语中的概念搞糊涂了，或者说在大多数西方文化，不仅是英语文化中，当我们说到同情时，我们是指对别人的同情，他说：“你们对自己没有同情，又怎么能对别人有同情呢？”自我是基础，铂金法则，就是说对我们自己也要有同情，对待自己不能不同于对待别人，要有同样的标准，要像接受别人，我们所爱的人的失败一样，去接受我们自己的失败。
+**因此制定一个终极目标可以让你解放，这是铂金法则。**黄金法则就是“已所不欲勿施于人”或者说“己所欲方施于人”，这是当今很多道德体系和宗教信仰的基础，铂金法则就是取自黄金法则，再对其进行小小的修饰，它说的是“人所不欲勿施于己”或者说“人所欲方施于己”，如果你的一个好朋友，你非常在乎的一个人，或者家庭成员失败了，没做好，你会怎样对待这个人，你会排斥这个人吗？“你考试只得了个B”或者“你竟然没赢得比赛”你会这样对待他们吗？还是你会拥抱他们？你们会因此少爱他们一点吗？当然不会，那么为什么我们要将这些不现实的，毫无共鸣的标准强加给我们自己呢？吹喇叭那个，当他开始大量接触西方文化时，被一样东西困扰了，就是我们用的一个词：同情，同情这个词，在藏语中叫“tsewe”拼为“t-s-e-w-e”这个词在藏语中的意思，即是同情他人也是同情自己，所以他完全被英语中的概念搞糊涂了，或者说在大多数西方文化，不仅是英语文化中，当我们说到同情时，我们是指对别人的同情，他说：“你们对自己没有同情，又怎么能对别人有同情呢？”自我是基础，铂金法则，就是说对我们自己也要有同情，对待自己不能不同于对待别人，要有同样的标准，要像接受别人，我们所爱的人的失败一样，去接受我们自己的失败。
 
 为什么不呢，我们是如何帮助别人的？因为通常我们处于一段感情中时，和完美主义者有感情的人，或者我们有个朋友是完美主义者的话，我们如何去帮助别人？首先要搞清楚一件重要的事就是：帮助别人是非常困难的，处理完美主义的问题，通常都要从内部着手，他们必须要渴望改变，因为这是需要时间的，不是立竿见影的。我从研究中或者个人经历中了解到这一点，但我们还是能去帮助他人，即使知道这很困难，首先最重要的事就是树立榜样，如果我能改变，成为一个追求卓越的人，享受失败，即使失败也要庆祝，即使偶尔挫折也要庆祝，那我就做出了榜样，还记得那个实验吧？人们更愿意照着你所做的去做，而不是你说的话。第二件事就是分享这个故事，也就是这门课，上两节课所讲的内容—基本上是关于我个人如何从完美主义者变为追求卓越者的故事，讲故事，互相分享。再次强调分享和讲的区别，分享，两者皆有收获，讲就是单行道，最后还有一种帮助别人的方式，回忆一下Carol Dweck的研究，工作回报，过程的回报，很容易陷入对结果的回报之中，也很容易忘记回报过程，我在抚养我的小孩时就觉得很困难，在感情之中也很难做到，作为上司或者朋友当然也很难，但一定要注意回报过程，要指出来“这是个不错的尝试”或者“这真是太有趣了”注重过程。
 
-我想通过做一个对至今为止所讲内容的小小总结来结束这个话题，这是个技巧，一个很简单的技巧，但我发现是个很有用的技巧，因为它能够整合我们目前为止所见过的，所有内容，我将这个技巧应用于各种困境中，当我在面对人生中很困难的一段时期可能是很长的一段时期，也可能是很困难的一天时，当我感受到焦虑或压力或者深深的失望时，这是除了三个M之外的另一种选择，还记得三个M吗？放大，减小以及编造，发明。三个P则是另一种选择：
+我想通过做一个对至今为止所讲内容的小小总结来结束这个话题，这是个技巧，一个很简单的技巧，但我发现是个很有用的技巧，因为它能够整合我们目前为止所见过的，所有内容，我将这个技巧应用于各种困境中，当我在面对人生中很困难的一段时期可能是很长的一段时期，也可能是很困难的一天时，当我感受到焦虑或压力或者深深的失望时，这是除了三个M之外的另一种选择，还记得三个M吗？放大，减小以及编造，发明。
 
-第一个P就是准许自己为人，如果我经历了困难，我遇到了挫折，第一步就是给自己许可证，也就是说接受这样的感情，接受这个困境，接受现实，它已经发生了，我对此什么也做不了，能够改变的只有我对它的诠释。
 
-这时我就会进入下一个层次，到下一步，也就是重建，将情况诠释为积极的，这就是积极者。这其中有什么闪光点？其中有什么成长的机会？所以如果我经历了困境，也许可以用佛教的眼光来看待，“这是成长的工具，这可以帮助我更好地了解自己，了解他人，成为一个更好的心理学家，成为一个更好的商人，诸如此类。再次发掘出失败中的闪光点，失败中的机会”。我们没怎么提到的一个非常之用的技巧，就粗略提到过的，就是分心。将注意力转向别处，这不一定是件好事。我们下节课会讲到，有时执着于分析每种情感、感觉和想法，是有害的。反复思考并不一定有帮助。有时最好的方法，就是当消极的想法或者负面的情绪出现时，将我们的注意力转到别处。比如说，听听音乐、跑跑步、和别人聊聊这件事或者别的事，这和逃避是很不一样的。因为这并不是说“好吧，我一辈子不要再管这种事了。”这只是说如果某种情绪或者想法反复出现，我永远都在徒劳地抗争，把石头推上去，然后又被推下来，上上下下。有时更好、更有用的方法是，“好吧，我不要再反复想了，这没有意义。这个神经通路在我脑海中太强烈了，不会有任何出路的，”然后说，“让我继续前进吧，让我去听首好歌，让我去跑个步，好让我能够真正忘记它。”很经常地。跑步还能使我从全新的角度来看待这件事。我们会更深入地探讨这个分心，因为差异非常微小，并不是逃避。我们下节课周四讲到处理沮丧，或者焦虑时会用到冥想，用念来分心，但那也是一种积极对待的方式。
 
-最后，第三个P是指换个角度，这真的很重要吗？Richard Carlson写了一本很好的自助书，“别为小事伤神，一切皆是小事”。我不完全同意后半句，“一切皆是小事”但很显然，生活中我们为之伤神的事都是小事。要不为小事伤神，就要问一个简单的问题，它在一年后会不会有影响？或者更久……从长远来看，它真的很重要吗？它真的值得我去担心、焦虑。为之沮丧、为之焦躁吗？它在一年后真的会有影响吗？通常情况下都不会。从另一方面说，有什么是真的重要的吗？
+三个P则是另一种选择：
+
+**第一个P就是准许自己为人**，如果我经历了困难，我遇到了挫折，第一步就是给自己许可证，也就是说接受这样的感情，接受这个困境，接受现实，它已经发生了，我对此什么也做不了，能够改变的只有我对它的诠释。
+
+这时我就会进入下一个层次，**到下一步，也就是重建，将情况诠释为积极的，**这就是积极者。这其中有什么闪光点？其中有什么成长的机会？所以如果我经历了困境，也许可以用佛教的眼光来看待，“这是成长的工具，这可以帮助我更好地了解自己，了解他人，成为一个更好的心理学家，成为一个更好的商人，诸如此类。再次发掘出失败中的闪光点，失败中的机会”。我们没怎么提到的一个非常之用的技巧，就粗略提到过的，就是分心。将注意力转向别处，这不一定是件好事。我们下节课会讲到，有时执着于分析每种情感、感觉和想法，是有害的。反复思考并不一定有帮助。有时最好的方法，就是当消极的想法或者负面的情绪出现时，将我们的注意力转到别处。比如说，听听音乐、跑跑步、和别人聊聊这件事或者别的事，这和逃避是很不一样的。因为这并不是说“好吧，我一辈子不要再管这种事了。”这只是说如果某种情绪或者想法反复出现，我永远都在徒劳地抗争，把石头推上去，然后又被推下来，上上下下。有时更好、更有用的方法是，“好吧，我不要再反复想了，这没有意义。这个神经通路在我脑海中太强烈了，不会有任何出路的，”然后说，“让我继续前进吧，让我去听首好歌，让我去跑个步，好让我能够真正忘记它。”很经常地。跑步还能使我从全新的角度来看待这件事。我们会更深入地探讨这个分心，因为差异非常微小，并不是逃避。我们下节课周四讲到处理沮丧，或者焦虑时会用到冥想，用念来分心，但那也是一种积极对待的方式。
+
+**最后，第三个P是指换个角度**，这真的很重要吗？Richard Carlson写了一本很好的自助书，“别为小事伤神，一切皆是小事”。我不完全同意后半句，“一切皆是小事”但很显然，生活中我们为之伤神的事都是小事。要不为小事伤神，就要问一个简单的问题，它在一年后会不会有影响？或者更久……从长远来看，它真的很重要吗？它真的值得我去担心、焦虑。为之沮丧、为之焦躁吗？它在一年后真的会有影响吗？通常情况下都不会。从另一方面说，有什么是真的重要的吗？
 
 几年前，有个朋友问了我一个非常简单的问题，他说，“我们之前从来没有聊过这个的，”他是我很好的朋友，但也没聊过，“你能告诉我心理成熟是什么吗？通过你的研究，你能想明白心理成熟到底是什么吗？”就在这一霎那，就在当时，后来我又对这个定义做了些修饰。我当时这么说，心理成熟就是根据自己的意愿转换角度的能力。我觉得这差不多是对的，基于这些关于转换角度的能力的研究。为什么？这种转换角度的能力是什么？这就是我们希望沉浸在当下的一种能力，也正是我们退一步，时间和空间上都退一步。问这样的问题，“它真的有影响吗？一年之后呢？或者更长远来看呢？它真的很重要吗？”同时随心所欲地回来，能够灵活地将思绪拉回来，沉浸于聆听一首美妙的歌，或者和我们所爱的人一起。说起来容易，做起来难。但逐渐我们可以通过冥想来训练我们的思想，通过对事物进行认知重建，我们可以训练我们的思想，使其能够按照我们的意愿来转换。
 
@@ -102,7 +113,11 @@ Michael Babyak做的实验是：找了156个抑郁症患者。这些人有各种
 
 这是完美主义的一种症状，我在做运动员时就经历过这样的事，过度训练，恢复不足，并为此付出了代价。身体上自然是受了伤，而且心理上也受了伤。我推荐每周有一到四天的休息时间。理想情况下你想每周锻炼五到六次，我认为至少要保证每两天一次，这样就是每周就是三到四天。至少每两天一次。理想状态下你们可能想跟多一点。每次半小时也可以增加到一小时，关键是要听从你身体的需要。如果你的很提很痛苦超出了正常的不舒适范围，赶快停止；如果肌肉开始酸痛，停下来。宁可少做也不要过度。还有一种聆听你身体的方法，如果你没那么敏感的话就是就戴个心率监控器，不是很贵但非常有用，这样我就知道我的锻炼会保持在最高心率的70%左右，我最高心率的70%大概是128，于是我就在120到135之间锻炼。偶尔我又会加强一点，达到90%，我的差不多是165.很容易发现你们的心跳通常在最大心率是220减去你的年龄。所以如果你20岁最大心率就是200。我是37所以就是183。差不多吧。然后你就保持在70%的水平。65%到75%的水平来获得锻炼的最温和的效果。记住数量确实会会影响质量。我们再次画个图表，我们经常看到的线性曲线图。在图的这边（纵向）是心理和生理的好处，这里（横向）是运动量。那么画出来就是这样的，太少了不好，我们要达到基本的幸福水平才行；太多了也不好，这时我们就会感到泄气和焦虑。我们想要达到的是差不多的最适水平。而这个最适水平也在于我们能投入多少时间。在理想情况下，我每周锻炼六次，每次一小时，在理想情况下是这样，但我还想做很多别的事。所以我每周至少锻炼四次，每次半小时。这对我来说就足够了。要搞清楚什么对你是足够的。
 
-恢复也很重要，我们从心理学层面上讲过恢复。恢复很重要。我简要的和你们分享一下Derek Clayton的故事吧。Derek Clayton是60年代早期的一个长跑运动员，世界上最好的长跑运动员之一。最好的之一，并不是最好的。他是跑马拉松的，很多人说，他之所以不是最好的，是因为从身体上讲他不太适合跑马拉松。他身高六尺二，1米88。并且他的最大心率、最大血液溶氧量不是很高，没有其他世界级选手那么高。但是他的优势在于他是最勤奋的一个，他每周跑一百多英里，远远多于一百英里非常努力。于是他成为了世界最好的长跑运动员之一，但从来没有成为过真正的第一。然后发生了什么了呢。由于他的过渡刻苦勤奋，他受了很严重的伤，一整个月不能跑步，他当时正在准备非常重要的一项马拉松赛事，这个马拉松在日本举行。一整个月他都不能训练，走路都走不了。在比赛一周之前，他开始可以慢慢地跑。他说他会去日本跑的。他被邀请去参加了他是世界最好的长跑运动员之一。他说他会将其作为一次训练，作为下一次马拉松比赛训练的一部分。于是他去参加了这个马拉松，一个没有训练，结果提前八分钟打破他的个人纪录，成为历史上第一个仅用了两个小时十分钟跑完马拉松的人。两小时9分36秒。1967年。他继续努力训练，两年之后再次训练过度，又再次受伤，又一次他没法跑步。然后他去参加了比利时马拉松比赛。又打破了他的个人纪录，也打破了世界纪录：两小时8分33秒，世界纪录保持了12年的世界纪录。这时教练和运动员就开始明白适可而止的重要性，适当休息的重要性，恢复的重要性。有时过犹不及。很相似的故事Joan Benoit。最终赢得了1984年洛杉矶马拉松。在受伤了被迫休息之后。还有丹麦足球队，另一个例子，我想应该是1991年，最终赢得了欧冠，之前都没在比赛中，在最后一刻才加入，因为当时南斯拉夫正在搞分裂，于是他们作为了南斯拉夫的替补。在预选赛淘汰了之后，把丹麦队又找过来，把他们从沙滩上带来打冠军赛。因为他们恢复了、振作了，于是他们准备好了。恢复在运动中很重要，在心理层面同样很重要。锻炼是很好的，是一种灵药。鸡尾酒的第一个成分，我觉得算是最重要的成分。然而很对人，不仅仅在哈佛，世界上很多人都不锻炼。
+
+
+**恢复也很重要**，我们从心理学层面上讲过恢复。
+
+恢复很重要。我简要的和你们分享一下Derek Clayton的故事吧。Derek Clayton是60年代早期的一个长跑运动员，世界上最好的长跑运动员之一。最好的之一，并不是最好的。他是跑马拉松的，很多人说，他之所以不是最好的，是因为从身体上讲他不太适合跑马拉松。他身高六尺二，1米88。并且他的最大心率、最大血液溶氧量不是很高，没有其他世界级选手那么高。但是他的优势在于他是最勤奋的一个，他每周跑一百多英里，远远多于一百英里非常努力。于是他成为了世界最好的长跑运动员之一，但从来没有成为过真正的第一。然后发生了什么了呢。由于他的过渡刻苦勤奋，他受了很严重的伤，一整个月不能跑步，他当时正在准备非常重要的一项马拉松赛事，这个马拉松在日本举行。一整个月他都不能训练，走路都走不了。在比赛一周之前，他开始可以慢慢地跑。他说他会去日本跑的。他被邀请去参加了他是世界最好的长跑运动员之一。他说他会将其作为一次训练，作为下一次马拉松比赛训练的一部分。于是他去参加了这个马拉松，一个没有训练，结果提前八分钟打破他的个人纪录，成为历史上第一个仅用了两个小时十分钟跑完马拉松的人。两小时9分36秒。1967年。他继续努力训练，两年之后再次训练过度，又再次受伤，又一次他没法跑步。然后他去参加了比利时马拉松比赛。又打破了他的个人纪录，也打破了世界纪录：两小时8分33秒，世界纪录保持了12年的世界纪录。这时教练和运动员就开始明白适可而止的重要性，适当休息的重要性，恢复的重要性。有时过犹不及。很相似的故事Joan Benoit。最终赢得了1984年洛杉矶马拉松。在受伤了被迫休息之后。还有丹麦足球队，另一个例子，我想应该是1991年，最终赢得了欧冠，之前都没在比赛中，在最后一刻才加入，因为当时南斯拉夫正在搞分裂，于是他们作为了南斯拉夫的替补。在预选赛淘汰了之后，把丹麦队又找过来，把他们从沙滩上带来打冠军赛。因为他们恢复了、振作了，于是他们准备好了。恢复在运动中很重要，在心理层面同样很重要。锻炼是很好的，是一种灵药。鸡尾酒的第一个成分，我觉得算是最重要的成分。然而很对人，不仅仅在哈佛，世界上很多人都不锻炼。
 
 为了将定期锻炼引入我们的生活，我们要跨越怎样的障碍？
 
