--- a/5.md
+++ b/5.md
@@ -4,11 +4,17 @@
 
 大家好！能听到吗？非常感谢，我只占用90秒，我叫Josh，Bieber，好的，我感觉很好。我是为美国而教的成员，现在为组织工作，负责新址开展。大四时，我勉强认为这是个机会，招聘到期日，固执的组织招募人员，打来电话`，听电话时我差点睡着，我本不会应聘，但我还是磨蹭了两小时完成短文，多亏那个打来电话的人，这是我人生最美好，最快乐的两年。
 
-请再给我一分钟，希望大家对组织有两个了解，我想你们知道组织的目的。一是这个国家对学校里的，孩子们的教育是不平等的，低收入孩子在离开小学前，已落后多年，其中不到一半能高中毕业，这非常不公正，完全的不公正。二，你们能带来改变，我开始也怀疑组织，和自己的能力，但我知道这是真的。如果你走进一个五年级教室，学生们从第一天开始就落后很多，恨学校，因此也恨你。九个月后，他们成绩优异，恳求更多作业，希望与你共度周未，让你觉得一切都有可能。我在此足以说明，“为美国而教”对我来说是一个真正让我实现想法和希望的地方，参与实现我们都想见到的改变。我愿意鼓励所有同学，不管你们计划明年做什么，请大家超越那些想法，考虑这个机会。它是我可能做过的最好的事，最后期限是明天，很容易做，不需要推荐，申请就行，给自己机会，像我一样爱上这份工作，最后我想说，现在坐在教室里的同学们，可能获得同龄人中最好的教育，世界上最好的教育，我们的学生和学校需要你们，请加入我们，感谢给我的时间，祝大家上堂精彩的课。
+请再给我一分钟，希望大家对组织有两个了解，我想你们知道组织的目的。
 
-大家好，只说几句。如果这里有公开课学生或本科生，不能在这周来上课的，今晚七点半有一堂开放课，是为公开课学员制作的录像，有时间和兴趣上课的，请在课后来找我，谢谢！现在我想介绍两位挚友，积极心理学的支持者，可能比任何人，更致力推广积极心理学。以严谨和有趣的方式，我请他们简单介绍一下。宾州大学应用积极心理学硕士课程，唯一的硕士学位，世界上第一个硕士学位，目前还有其他几个。他们会简单介绍一下，利用15分钟时间，介绍一下硕士课程，然后再开始今天的课程，希望让人兴奋，有请James和Debbie。
+一是这个国家对学校里的，孩子们的教育是不平等的，低收入孩子在离开小学前，已落后多年，其中不到一半能高中毕业，这非常不公正，完全的不公正。
 
-非常感谢，很高兴能来到这里，和你们共度几分钟，真是乐事。在这样特别的课堂上，在这里你们将积极心理学的科学，和应用合二为一。当然你们很快就知道，Tal是位杰出的教授，能把复杂的概念，变得简单易懂，又不过份简单，而且发人深省，让讲座富于感召力，使我们想出去应用学到的理念。我想知道有多少人，对将积极心理学应用于，生活中感兴趣，请举手。好，很好。有多少人选择这门课，是因为有兴趣在未来事业中，应用积极心理学，在工作中。好的，很好，好极了！希望你们起码能那么做，那些有兴趣，深入学习积极心理学的学生，在研究生程度课程获取知识，但同样能够，将所学带入事业。我们很高兴能够向你们介绍，一下宾州大学的，积极心理学硕士课程。谈谈将积极心理学，从课堂带向世界。
+二，你们能带来改变，我开始也怀疑组织和自己的能力，但我知道这是真的。如果你走进一个五年级教室，学生们从第一天开始就落后很多，恨学校，因此也恨你。九个月后，他们成绩优异，恳求更多作业，希望与你共度周未，让你觉得一切都有可能。我在此足以说明，“为美国而教”对我来说是一个真正让我实现想法和希望的地方，参与实现我们都想见到的改变。我愿意鼓励所有同学，不管你们计划明年做什么，请大家超越那些想法，考虑这个机会。它是我可能做过的最好的事，最后期限是明天，很容易做，不需要推荐，申请就行，给自己机会，像我一样爱上这份工作，最后我想说，现在坐在教室里的同学们，可能获得同龄人中最好的教育，世界上最好的教育，我们的学生和学校需要你们，请加入我们，感谢给我的时间，祝大家上堂精彩的课。
+
+
+
+现在我想介绍两位挚友，积极心理学的支持者，可能比任何人，更致力推广积极心理学，以严谨和有趣的方式，我请他们简单介绍一下。宾州大学应用积极心理学硕士课程，唯一的硕士学位，世界上第一个硕士学位，目前还有其他几个。他们会简单介绍一下，利用15分钟时间，介绍一下硕士课程，然后再开始今天的课程，希望让人兴奋，有请James和Debbie。
+
+非常感谢，很高兴能来到这里，和你们共度几分钟，真是乐事。在这样特别的课堂上，在这里你们将积极心理学的科学，和应用合二为一。当然你们很快就知道，Tal是位杰出的教授，能把复杂的概念，变得简单易懂，又不过份简单，而且发人深省，让讲座富于感召力，使我们想出去应用学到的理念。我想知道有多少人，对将积极心理学应用于生活中感兴趣，请举手。好，很好。有多少人选择这门课，是因为有兴趣在未来事业中，应用积极心理学，在工作中。好的，很好，好极了！希望你们起码能那么做，那些有兴趣，深入学习积极心理学的学生，在研究生程度课程获取知识，但同样能够，将所学带入事业。我们很高兴能够向你们介绍，一下宾州大学的，积极心理学硕士课程。谈谈将积极心理学，从课堂带向世界。
 
 你们知道积极心理学刚刚诞生十年，始于1998年。Martin Seligman，美国心理学协会当时的主席，积极心理学是他主持开创的。四年前，Martin Seligman创办积极心理学中心，在宾州大学。积极心理学中心的使命是推广研究，培训，教育和传播积极心理学，2005年一月，我加入积极心理学中心，任教育主任和高级学者。2005年二月，Debbie Swick加入中心任教育助理主任。我们的任务是编制硕士课程，并在秋季推出。我一月加入，Debbie二月加入，三月完成论出，印刷并出版，申请的最后期限是四月。我猜有点乐天派，我们不知道是否有人报读，不知是否有人感兴趣，但我们不需要担心，我们收到超过一百份申请表。秋天时收了36名学生，后来的收生情况越来越好，这是我们当前的学生。
 
