--- a/10.md
+++ b/10.md
@@ -1,66 +1,388 @@
 **\[第10集\] 如何去改变**
 
-早上好！今天要讲的是**变化**。今天很多事都会发生变化，我们之间的关系会发生变化，敬请关注啊！
+## 摘录
+
+> 这不是什么好事，也不是坏事，这只是既定事实。就好像万有引力，无所谓好坏。想要支配天性，必先服从天性。我们要认识自己的天性，理解，并充分善用这些天性。
+>
+> (高峰体验)“效果等同于心理疗法，**前提是体验者目标明确，有自知之明，并且清楚自己的方向。**
+
+
+
+
+
+
+
+早上好！今天要讲的是**变化**。
 
 上节课结束的时候，我们谈到**很多种不同的变化**。
 
-**第一种**方式是`渐进式的`，好像滴水穿石，要花时间的、一点一点的、慢慢的；
+- **第一种**方式是`渐进式的`，好像滴水穿石，要花时间的、一点一点的、慢慢的；
 
-**第二种**方式是突发式的，好像用大锤开山劈石，凿出一条路，一个隧道。
+- **第二种**方式是突发式的，好像用大锤开山劈石，凿出一条路，一个隧道。
 
-对于这两种变化，或是所有形式的变化，必须要注意的是：我们讲的重点是**要将变化持续下去**，而不是突然一变之后又恢复原状。因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，**一点一点的构建起新的神经通路**(这是变化的本质)。
+对于这两种变化，或是所有形式的变化，必须要注意的是
 
-还记得我们之前说过的两个重要概念，**神经塑性**和**新生神经元**吗？因为通过了解和理解我们大脑的变化，我们自身也将更容易产生变化。Carol Dweck做过相关研究（我们之后谈到完美主义的时候还会提到她）。另外大锤的例子和探索经验是一回事——真知灼见不是凭空产生的，而是经过长时间准备后千锤百炼而得来的。大家都知道所谓的灵感来自于99%的汗水，所以说没有灵丹妙药，而且正是那种对灵丹妙药的笃信和渴求导致了今天抑郁症如此高发频发。因为大家都很郁闷，很失望，发现灵丹妙药不管用的时候，就觉得是自己出了问题。我在书里也写了很可能他们认为“如果做完这五件事，我的人生就会美满了”。结果五件事做完，我却没有变得更快乐，于是我就开始怀疑自己。其实没有灵丹妙药。任何事都需要时间。没有所谓什么“幸福生活五步走”。
+- 我们讲的重点是**要将变化持续下去**，**而不是突然一变之后又恢复原状**。
+- 因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。
+- 因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，**一点一点的构建起新的神经通路**(这是变化的本质)。
 
-在我们讲变化过程之前，我们先要厘清一些概念。
+还记得我们之前说过的两个重要概念，**神经塑性**和**新生神经元**吗？
 
-1. **首先**我们要问的是：**我，或者你，真的想要改变吗？**这不是一个无关紧要的问题，也不是象征性地问自己一下，因为表面上我们可能会说当然了，但是潜意识里却有东西在阻挠我们。
+- 因为通过了解和理解我们大脑的变化，我们自身也将更容易产生变化。
+  - Carol Dweck做过相关研究（我们之后谈到完美主义的时候还会提到她）。
 
-我给大家举个例子吧。早在80年代的时候，Langer和Thompson曾做过一个实验。这个实验是这样的：他们找来一些学生或参与实验的人，然后问这些人他们想不想要摆脱自己性格的某个方面，比如说古板、或者容易轻信别人、或是冷酷。他们问这些人想不想要摆脱这些性格，想不想在这方面变的更好，是不是真的能改变自己。也就是说，如果改变对于你来说真的很重要，那你能不能最终变得不那么古板、不那么容易轻信别人、不那么冷酷。这就是他们最初问的两个问题——想不想改善？想不想改变？然后，在他们问了这些问题之后，实验还有第二个阶段。在这个阶段，他们让这些人去评估，评估下列正面性格，比如：言行一致对于你来说是否重要；值得信赖是不是重要；以及被认为是一个严肃认真的人对于你来说有多重要。下面我们来说这个实验的有趣的结果：所有**给这些正面性格打高分的人（这些黄色的是正面性格）认为这些性格很重要的人，反而比较不容易去改变自己的负面性格。**大家明白这其中的奥妙么？我想要摆脱古板的个性，我不喜欢自己那么古板，与此同时，言行一致在我看来是非常重要的品格。但是我反而不容易去改变自己的古板。因为在我的意识里，它们是相互关联的。对，我不想要古板下去了，同时我潜意识里有个小人却在说：我想要言行一致，别摆脱古板。**因为我把两者结合起来了，我把两者联系在一起了，因此不想舍其一**；因为我不想把婴儿和洗澡水一起倒掉，对于我来说两者是紧密相连的。同理，还有轻信和值得信赖。这两种品质可以说，**值得信赖的人，另一方面很容易轻信别人。**这种性格极端化以后，人会变得容易轻信别人，然而我却不想丢掉轻信别人的习惯，因为同时我不想丢掉我值得信赖的优点。同样的例子还有冷酷。**我的冷酷可能在潜意识里正反映出我的严肃认真**。
+另外大锤的例子和探索经验是一回事
 
-很多年来，真的是很久以来，我在思考分析并写了很多关于**完美主义**的东西。我不能理解为什么我自身的情况长久以来并未好转——因为我知道自己深受完美主义其害。我读了研究报告，反省个人经历，我知道完美主义对我百害无益，有损于我的健康。从长远来看也阻挠我成功，但是我却摆脱不了它，直到我读了这个报告。于是我问自己：在我的意识里它和什么联系在一起？和它密切相联的是**动力和雄心**。如果我需要自我定义的话，首当其冲的，同时因为我不想失去这些品格，我的潜意识便阻止我摆脱对完美主义的追求。我对完美主义的定义是（我们会用整整一周来讲完美主义，到时候会讲的更深入一些）只有当我明白了这两者之间的密切关联，我才能够把它们拆开，分开。我只想保留其一。再比如担忧和焦虑（其实我已经说过很多次了）我最终摆脱了焦虑的困扰。下次我会和大家说说具体的过程。
+- **真知灼见不是凭空产生的，而是经过长时间准备后千锤百炼而得来的。**
 
-自从很久以前开始，我上大学的时候，每当有壁球比赛也好，或者是考试也好，或是在分组讨论的时候发言之前，我都会非常焦虑。我不想再这样下去了。我不想要焦虑。然而，我却丢不掉这种担忧和**焦虑**，因为我同时很重视责任感。**如果我会焦虑，说明我有责任感**，我会在上课前更认真的做准备而不是随便糊弄、偷懒。**因此我把焦虑和正面品格责任感联系起来**。还记得关于Brandon的故事吗？**责任感**是非常重要的品质，但是它却阻挠我摆脱担忧和焦虑。这都是在潜意识里发生的，我之前并没有意识到这些。
+大家都知道所谓的灵感来自于99%的汗水，所以说没有灵丹妙药，而且正是那种对灵丹妙药的笃信和渴求导致了今天抑郁症如此高发频发。
 
-还有罪恶感。有好的罪恶感也有不好的罪恶感。我不想摆脱罪恶感，因为我不想变得对他人冷漠无情。我们经常会把这两者联系起来。还有一对概念，是精简化。这也是我的切身体会。我想要减少工作量，因为我明白同时参与太多活动有损于，有损于我的工作效率、创造力和健康。但是我却没办法做到精简。为什么呢？因为我将它和失去优势联系起来，所以我没办法做到精简。还有我们上周谈到的寻找过错。为什么人们不能停止寻找过错呢？为什么要维持悲观的态度呢？因为他们把寻找过错和现实主义联系起来。我不想放弃这种现实的态度，不想变成一个脱离现实盲目乐观的人，因此我不会放弃寻找过错的习惯。
+因为大家都很郁闷，很失望，发现灵丹妙药不管用的时候，就觉得是自己出了问题。
 
-**幸福，通往幸福路上最大的障碍，就是人们把幸福和偷懒联系在一起**，因为当今文化中最为人所追捧。如果我现在很快乐，就意味着我不再经历痛苦，就意味着我放弃了，意味着我不会成功，意味着我已经失去了棱角，意味着我不再有动力和雄心，所以我们在潜意识里选择不快乐。这样的话，我们就不会失去其它珍贵的东西，比如雄心壮志、比如长处优势、比如勤奋刻苦。当然，依我们现在来看，我们知道这些东西并不是密不可分的。正相反，比如说快乐，我们从**“拓延-建构”理论中学到：正面的情绪是和成功联系在一起的。**等到春假之后当我们讲到完美主义的时候，我会讲一些从研究中得来的理论。大家可以把这些理论和你们个人联系起来。你们中间有很多人会发现可以将其和自身联系起来。如果我们能赶走对失败的恐惧，学会面对它，学会冒险，从失败中学习经验，将失败看作是未来成功路上的垫脚石，这些都不意味着我们会相应的失去动力和雄心抱负，克服对失败的恐惧，或担忧焦虑，或罪恶感，或种种不幸福的关键，或更好的去理解这些品格的含义。
+我在书里也写了，很可能他们认为“如果做完这五件事，我的人生就会美满了”。结果五件事做完，我却没有变得更快乐，于是我就开始怀疑自己。
 
-举个例子，**要理解我想要摆脱对失败的恐惧感，不是一般的恐惧，而是消磨人意志的恐惧，因为每个人都在某种程度上害怕失败。但是要摆脱这种消磨人意志的恐惧，同时保存我的动力和雄心，就必须要理解两者是密不可分的。**又或者，你们知道我以前不会对人说不。这么短小的一个词，简单的一个词，有时候是那么难以说出口。为什么？因为我眼中的自己和我希望别人眼中的自己是有同情心的、善解人意的、是老好人。于是我把两者拆开了，它们并不一定要连在一起。我可以善解人意的说不，因为很多时候当我对别人说好，我其实同时在对自己说不。从长远来看，也是在对亲密关系说不。所以现在我更好更深入的了解了我什么时候能说不，什么时候不想说。同时，我还能保留自己的善解人意和同情心，也不必在每次说不的时候感到有种罪恶感。这里列出来的每种品格，都是可以被拆开的。大家可以想想有哪些品性是你很久以前就想改掉却改不掉的。对完美主义的追求？还是严酷无情？还是你想变得更顽皮活泼？**也许你并不想摆脱这种个性，因为害怕自己会失去严肃认真的品性。其实你根本不需要失去，把婴儿留下，把洗澡水倒掉。前提是我们能搞清楚我们到底想改变什么。**
+其实没有灵丹妙药。任何事都需要时间。没有所谓什么“幸福生活五步走”。
 
-下周的**小组讨论活动**，你们要和助教一起做一个叫**完成句子的练习**。下面要说的正是你们在练习中要做的事：你们要识别……这个练习是Nathaniel Branden设计的，**它将帮助你识别自己分别想要摆脱和保留的品格。**很多时候，不管在显意识还是潜意识中，都有一个你自己制作的开关，可以引发洪水，打开通往新隧道的大门，大脑里新的通路，真正永久性的变化。
+-----------
 
-我们现在要讨论三个截然不同却又相互连结的通向变化的途径——这就是我们之前提过的“心理学ABC理论”。**ABC理论——A代表情感，情绪；B代表行为，行动；C代表认知，思维。**我们今天要做的是……我们会分别讲这三个元素。在分别讲这三个元素的时候我们会谈到渐进式变化和突发式变化。可以说我们用两种方法解释三元素，情感、行为、认知乘以渐进式和突发式，一共有六种变化的方式。这六种方式彼此相通，把它们联系起来很重要。我们希望能三者兼得。为什么呢？引用一句我们提过多次，以后也会再提的名言，Dryden和Poet说的：为了能改变习惯，产生永久性的变化，我们不仅需要一种稳定的变化模式，也同样需要一种外部介入的力量。仅仅把注意力放在情感上是不够的，放在行动上也是不够的，放在思维上也是不够的，**我们要对三元素同时下功夫——A B和C三元素。**大家可以想想看，就好像我们把习惯看成一股洪流，一股我们思维的洪流。这股洪流是由来自不同通路的神经元构成的。我们现在要做的是对抗这股洪流。为了做到这点，我们需要足够大的外力，因此我们要尝试尽可能多的方法。
+在我们讲变化过程之前，我们先要厘清**一些概念**。
 
-在我们讲A元素之前，我再问一个问题：我们想改变什么？我们能改变什么？不能改变什么？以Lyubomirsky Diener等人为首的，在我们试图分析一个人的幸福感时，我们需要研究三个因素。**第一个因素是遗传排列**，不是遗传点，而是排列。我们都生来具备一些特定的快乐和健康倾向性体质。有些人生来就是一张笑脸，嘴里含着“笑汤匙”。另一些人则不然。我们都排列在这条钟形曲线上，有些人注定比其他人更幸运。我之前也提过几次，我就没那么走运。我一出生就在曲线上偏焦虑的那一端，嘴里也没含着快乐的小汤匙，但我的天性令我有资格教这门课，因为我通过努力和各种尝试改变了自己的人生。我可以谈个人的经验，因为我有过那样的经历。现在有些人可能会说……对此我想说：这不是什么好事，也不是坏事，这只是既定事实。就好像万有引力，无所谓好坏。想要支配天性，必先服从天性。**我们要认识自己的天性，理解，并充分善用这些天性。**
+- **首先**我们要问的是：**我，或者你，真的想要改变吗？**这不是一个无关紧要的问题，**也不是象征性地问自己一下**，因为表面上我们可能会说当然了，但是潜意识里却有东西在阻挠我们。
+  - 我给大家举个例子吧。早在80年代的时候，Langer和Thompson曾做过一个实验。
+  - 这个实验是这样的
+    - 他们找来一些学生或参与实验的人，然后问这些人他们想不想要摆脱自己性格的某个方面
+      - 比如说古板、或者容易轻信别人、或是冷酷。
+    - 他们问这些人想不想要摆脱这些性格，想不想在这方面变的更好，是不是真的能改变自己。
+      - 也就是说，如果改变对于你来说真的很重要，那你能不能最终变得不那么古板、不那么容易轻信别人、不那么冷酷。
+    - 这就是他们最初问的两个问题
+      - 想不想改善？想不想改变？
+    - 然后，在他们问了这些问题之后，实验还有第二个阶段。
+    - 在这个阶段，他们让这些人去评估，评估下列正面性格
+      - 比如：言行一致对于你来说是否重要；值得信赖是不是重要；以及被认为是一个严肃认真的人对于你来说有多重要。
+    - 下面我们来说这个实验的有趣的结果
+      - 所有**给这些正面性格打高分的人（这些黄色的是正面性格）认为这些性格很重要的人，反而比较不容易去改变自己的负面性格。**
+      - 大家明白这其中的奥妙么？
+      - 我想要摆脱古板的个性，我不喜欢自己那么古板，与此同时，言行一致在我看来是非常重要的品格。
+      - 但是我反而不容易去改变自己的古板。*因为在我的意识里，它们是相互关联的*。
+      - 对，我不想要古板下去了，同时我潜意识里有个小人却在说：我想要言行一致，别摆脱古板。**因为我把两者结合起来了，我把两者联系在一起了，因此不想舍其一**；
+      - 因为我不想把婴儿和洗澡水一起倒掉，对于我来说两者是紧密相连的。
+      - 同理，还有轻信和值得信赖。
+        - 这两种品质可以说，**值得信赖的人，另一方面很容易轻信别人。**
+        - 这种性格极端化以后，人会变得容易轻信别人，然而我却不想丢掉轻信别人的习惯，因为同时我不想丢掉我值得信赖的优点。
+      - 同样的例子还有冷酷。
+        - **我的冷酷可能在潜意识里正反映出我的严肃认真**。
 
-我们健康中和快乐相关的指数差异有50%并不是由遗传所决定的。当然遗传基因是有影响的。比如双胞胎研究的案例。为什么有很多对双胞胎在长期分离的情况下彼此之间仍有那么多相似之处？因为遗传决定的。这作用无所谓好坏，也不是百分之百由它决定，感谢上帝，只有差异中的50%。我们应该随时牢记：对于如何运用这些基因，我们是有很多的支配能力的，我并不知道确切的数据。成功的篮球运动员50%是由遗传基因决定的。比如肌肉里有多少快肌纤维和慢肌纤维，或者能跳多高，协调性如何，身高多少，这些都很重要。但是如果迈克尔乔丹从没练过篮球，我应该能比他打的好。如果他从没练过的话，而且我的确练过，换句话说，在遗传作用的前提下不去努力争取幸福的人，即便他们有最好的遗传基因，也不会比基因不如他们但努力争取的人快乐。所以说后天努力至关重要。
+- 很多年来，真的是很久以来，我在思考分析并写了很多关于**完美主义**的东西。我不能理解为什么我自身的情况长久以来并未好转——因为我知道自己深受完美主义其害。
+- 我读了研究报告，反省个人经历，我知道完美主义对我百害无益，有损于我的健康。从长远来看也阻挠我成功，但是我却摆脱不了它，直到我读了这个报告。
+- 于是我问自己：在我的意识里它和什么联系在一起？和它密切相联的是**动力和雄心**。如果我需要自我定义的话，首当其冲的，同时因为我不想失去这些品格，我的潜意识便阻止我摆脱对完美主义的追求。我对完美主义的定义是（我们会用整整一周来讲完美主义，到时候会讲的更深入一些）
+- 只有当我明白了这两者之间的密切关联，我才能够把它们分开。
+- 我只想保留其一
+- 
+- 再比如担忧和焦虑（其实我已经说过很多次了）我最终摆脱了焦虑的困扰。下次我会和大家说说具体的过程。
+  - 自从很久以前开始，我上大学的时候常常会非常焦虑。
+  - 我不想再这样下去了。我不想要焦虑。
+  - 然而，我却丢不掉这种担忧和**焦虑**，因为我同时很重视责任感。**如果我会焦虑，说明我有责任感**，我会在上课前更认真的做准备而不是随便糊弄、偷懒。**因此我把焦虑和正面品格责任感联系起来**。
+  - 还记得关于Brandon的故事吗？**责任感**是非常重要的品质，但是它却阻挠我摆脱担忧和焦虑。
+  - 这都是在潜意识里发生的，我之前并没有意识到这些。
+- 还有罪恶感。
+  - 有好的罪恶感也有不好的罪恶感。我不想摆脱罪恶感，因为我不想变得对他人冷漠无情。我们经常会把这两者联系起来。
+- 还有一对概念，是精简化。
+  - 这也是我的切身体会。我想要减少工作量，因为我明白同时参与太多活动有损于，有损于我的工作效率、创造力和健康。
+  - 但是我却没办法做到精简。为什么呢？
+    - 因为我将它和失去优势联系起来，所以我没办法做到精简。
+- 还有我们上周谈到的寻找过错。
+  - 为什么人们不能停止寻找过错呢？
+  - 为什么要维持悲观的态度呢？
+  - 因为他们把寻找过错和现实主义联系起来。我不想放弃这种现实的态度，不想变成一个脱离现实盲目乐观的人，因此我不会放弃寻找过错的习惯。
 
-**第二个对快乐差异指数有影响的因素是外部环境。**当然了，外部环境很重要。我们生活在一个自由的国度，还是受人压迫，带来的结果是完全不同的。但总的来说，外部环境只要不过于极端，比如无家可归流浪街头，其实影响不大，在差异方面只有10%的作用。因此，遗传作用50%，外部环境包括居住地、包括收入、天气等等，另外，这个不包括有季节性情感异常的患者。对于他们来说，有没有阳光太重要了。我现在说的是大部分人，不包括有季节性情感异常的人。因此除去极端案例，外部环境的作用不大，大概是10%。
+- 通往幸福路上最大的障碍，就是人们把幸福和偷懒联系在一起**
+  - 因为当今文化中最为人所追捧。如果我现在很快乐，就意味着我不再经历痛苦，就意味着我放弃了，意味着我不会成功，意味着我已经失去了棱角，意味着我不再有动力和雄心，所以我们在潜意识里选择不快乐。
+  - 这样的话，我们就不会失去其它珍贵的东西，比如雄心壮志、比如长处优势、比如勤奋刻苦。
+  - 当然，依我们现在来看，我们知道这些东西并不是密不可分的。
+  - 正相反，比如说快乐，我们从**“拓延-建构”理论中学到：正面的情绪是和成功联系在一起的。**
+  - 等到春假之后当我们讲到完美主义的时候，我会讲一些从研究中得来的理论。
+  - 大家可以把这些理论和你们个人联系起来。你们中间有很多人会发现可以将其和自身联系起来。
+  - 如果我们能赶走对失败的恐惧，学会面对它，学会冒险，从失败中学习经验，将失败看作是未来成功路上的垫脚石，这些都不意味着我们会相应的失去动力和雄心抱负。
+- 去理解这些品格的含义
+  - 是克服对失败的恐惧，或担忧焦虑，或罪恶感，或种种不幸福的关键。
 
-**第三点，剩下的40%是由意向活动决定。意向活动包括我们的所作所为所想，我们对世界的诠释和我们关注的焦点。**简而言之，就是这门课的内容，包括我们从第一节课开始讨论的内容以及下半学期我们将要讨论的内容，这些意向活动，我们关注的焦点其实就是我们的ABC。这也是产生有意义的变化的根源，是我们将要关注的重点。如果我们能改变遗传基因当然很好，是很好，但是不可能。如果我们能更好的控制外部环境当然很好，但是即便是我们能控制，结果也不会被改变。虽然在场的或是在家看视频的人中有很多的确能更好的控制外部环境，能改变结果的，能被我们所掌控的是内部活动，是我们对世界的诠释和我们的行动。好，现在我们就开始讲这部分的内容。
+- 举个例子，**要理解我想要摆脱对失败的恐惧感，不是一般的恐惧，而是消磨人意志的恐惧**
+  - 因为每个人都在某种程度上害怕失败。
+  - 但是要摆脱这种消磨人意志的恐惧，同时保存我的动力和雄心，就必须要理解两者是密不可分的。
+- 又或者，你们知道我以前不会对人说不。
+- 这么短小的一个词，简单的一个词，有时候是那么难以说出口。为什么？
+  - 因为我眼中的自己和我希望别人眼中的自己是有同情心的、善解人意的、是老好人。
+- 于是我把两者拆开了，它们并不一定要连在一起。
+- 我可以善解人意的说不，因为很多时候当我对别人说好，我其实同时在对自己说不。
+- 从长远来看，也是在对亲密关系说不。所以现在我更好更深入的了解了我什么时候能说不，什么时候不想说。同时，我还能保留自己的善解人意和同情心，也不必在每次说不的时候感到有种罪恶感。
+- 这里列出来的每种品格，都是可以被拆开的。大家可以想想有哪些品性是你很久以前就想改掉却改不掉的。对完美主义的追求？还是严酷无情？还是你想变得更顽皮活泼？
+- **也许你并不想摆脱这种个性，因为害怕自己会失去严肃认真的品性。**
+- **其实你根本不需要失去，前提是我们能搞清楚我们到底想改变什么。**
 
-**A——情感、情绪，是一种连接，更多的是从逻辑上，语言上将情感、动力、动作连接起来。**情感让人感动。没有情感我们将寸步难行。你们在书中读到了，或者之后会读到关于Elliott的故事。Elliott失去了情感功能，并随之丧失了行动做事的所有动力，尽管他还有认知能力。我们要行动就必须要情感。现在我要从两个方面谈情感。首先是渐进式变化；之后是突发式变化。渐进式变化是一种专注冥想。专注冥想可以带来安宁沉静，被认为是最有效的疗法，有很多与其相关的研究，我们之后会用一周的时间讲专注冥想，今天我只想做一个简单的介绍，讲一下**专注力的螺旋曲线**。
 
-从许多方面来说Jon Kabatt-Zin在这个学科领域做了很多重要的研究，他和另外一些科学家，包括Tara Bennett-Goleman和哈佛医学院的Herbert Benson一起在这个被认为很神秘的学科领域里做了很多重要研究**。“对专注力的培养可以引领我们发现身心纾缓，自身宁静和洞察力的最高深的境界，而通向这个境界的路径恰恰就在于你自身。这就是专注力的奇妙之处。”**那些研究结果是多么令人难以置信，它们仅仅通过专注于呼吸和身体的某个部位，通过亲临现场改变了我们的思维方式，改造了我们的大脑**。“所有人都有专注的能力，关键在于开发我们在此时此刻全神贯注的能力”。**让我们花一两分钟体验一下这种感觉。下面我想请大家做一个联系——还是那句话，如果你愿意做就做。请大家在椅子上坐好，将后背靠在椅背上，尽量坐舒服了，两脚放松平放在地上如果你愿意，如果你愿意的话闭上双眼，现在把注意力放在你的呼吸上。深吸一口气，吸至丹田，慢慢的、静静的、轻轻的呼气，再次慢慢的深吸一口气直至丹田，慢慢的轻轻的静静的长长的呼出来。如果你的思绪飘走了，把它放回到呼吸上来。现在想象你在脑中观察自己的身体：你的前额、眼睛、鼻子、嘴、脖子、胸膛、你的后背、腰、双腿，一直向下，直到你的双脚。上下观察你的身体，同时继续深深的慢慢的轻轻的呼吸。在你打量自己的时候，寻找身上的一个部位，它比其它部位更紧绷，可能是你的下巴，脖子，可能是你的肩膀，你的胃部；你感到这个部位有些不适，可能是你的腿，膝盖，双脚，找到这个部位，它比其它部位更紧绷，把注意力放在这个部位上，继续呼吸，深吸一口气，将气引至那个部位，然后在你放松呼气的时候把那种紧绷感也呼出去，放松；多深吸几口气至该部位然后放松，呼气，重新将注意力放在呼吸上；深吸一口气，慢慢的轻轻的静静的长长的呼气，同时放松；深吸一口气，慢慢的轻轻的长吐出来。在下次呼气之后轻轻的慢慢的静静的睁开你的双眼。另外如果坐在你旁边的人睡着了，请轻轻的把他们叫醒；如果有人还在说梦话，请把他们叫醒。
 
-《**情感炼金术**》一书中写道：**专注力意味着看到事物的本来面目，而不是试图去改变它们；关键是要消解我们，这就是所谓做人的权利。**随着情绪感受情绪，在这个过程中呼吸吐纳，虽然不一定总会这样，但是很多时候，如此一来情绪就消解了，随着这种情绪的消解，令人痛苦的情感也得到了心理解离。还是那句话，春假回来以后，我们会谈到很多关于这个疗法的内容。这就是渐进式的变化。在我们待会说到研究报告的时候大家会发现——即便这种渐进式变化只是短短的8周的日常冥想，我们的大脑也会开始改变形状，我们的免疫系统得到增强；即便只有短短8周的日常冥想，而且不一定是一天5小时的冥想，有时候就是一天30或20分钟已经足以带来变化。这个过程是循序渐渐的，缓慢的，希望大家可以用一生去实践。这是一个终身疗法。
+下周的**小组讨论活动**，你们要和助教一起做一个叫**完成句子的练习**。
 
-下面的例子是从突发变化的角度分析我们的情感。所以当我想填满这个3乘2模型的方盒子，我应该怎么去找情感突发式变化的案例呢？我立刻想到了一个临床心理学，研究的是关于创伤后应激障碍的。有成千上万的文章，都是关于创伤后应激障碍。我们系也做了相关的研究。当我想到它的时候，我对自己说：非常突然的变化，因为实际上当我们有创伤之后，很多人的一生因为创伤后应激障碍而从此改变了。它实际上改变了我们大脑中的化学物质；它改变了我们大脑的结构，建立了新的神经通路，破坏了很多以前的神经通路，全都是因为一个单独的经历，就像是大锤一挥。很不幸的是这是一个非常常见的疾病。我上次已经说过了，30%的越南战争老兵有创伤后应激障碍，30%之多；80%的第一次海湾战争老兵有创伤后应激障碍。我之前也提过，我们现在还没有关于第二次海湾战争的确切数据，但是相信人数只会更多不会更少。在911之前，在纽约110号大街以南，有两万人有创伤后应激障碍。911刚刚过去之后有6万人有创伤后应激障碍。这对人是有影响的，影响了我们的大脑功能，这种影响很多时候是终其一生的。这就是突发式的变化，伴随着创伤而来，比如911或者在战争中的恐怖经历从而影响了余生，影响了整个人生。这是一种休克疗法，消极的休克疗法。当我想到创伤后应激障碍的时候……我的意思是这属于临床心理学的范畴。
+下面要说的正是你们在练习中要做的事
 
-首先，从1998年起开始有很多相关研究。仅仅是在10年以前，就是在人们开始关注幸福心理学的时候，开始有很多关于创伤后成长的研究。研究发现：**实际上更多的人在经历创伤后得到的是成长而不是应激障碍。然而，没人提起创伤后成长。每个人都知道创伤后应激障碍，但是再次说明了这又是一个关于人们不愿去关注正面事物的案例。**如何正面呢？就是大部分人其实是非常有能力去承受创伤的。这是一个非常振奋人心的事实。如果人们知道这是可能实现的，是常见的，如果人们不会对经历创伤后成长感到愧疚，那么我们就会有更多自我实现的预言，也会有更多人拥有创伤后成长的经历。在我经历了越南战争之后有了那样的所见所闻，我怎么会成长呢？这是不对的。再说一次：世事总有不幸，但是有些人能尽量从世事中受益。当人们开始关注事情带来的益处时，就会产生创伤后成长。
+- 你们要识别……这个练习是Nathaniel Branden设计的，**它将帮助你识别自己分别想要摆脱和保留的品格。**
+- 很多时候，不管在显意识还是潜意识中，都有一个你自己制作的开关，可以引发洪水，打开通往新隧道的大门，大脑里新的通路，真正永久性的变化。
 
-那么创伤能带来什么好处呢——发生这种事终归是不幸的。比如，我从患癌症这件事上学到什么呢——和家人的关系更亲密；更珍惜生命；更珍惜花草自然；更享受和朋友在一起的时光。这件事这就是价值发现。再或者，很多人能在写日记的时候得到启示。（我们下节课会讲到记日记）再或者，有些人能够分享创伤经历。还记得二战大屠杀的幸存者和越战老兵之间的区别吗？对于不幸的经历，大屠杀的幸存者拿来分享讨论，把它写出来；越战老兵则只是反复去想。
+----------
 
-回到我们之前说的Lyubomirsky的研究。当你只想不说，不把心里话倒出来，它会积压在心里，更容易形成创伤后应激障碍。并不一定要这样。了解创伤后成长的好处是至关重要的。那么现在我向大家提一个问题。既然这是讲幸福心理学的课程，大家应该还记得幸福心理学关注的是有用的有效的事物，因此在备课的时候，我问了自己一个问题：有没有一个正面的和创伤相对应的元素——它的效果强大，但同时是正面积极的，并最终能像猛击大锤一样瞬间改变我们大脑的运作模式？有这样的元素吗？换句话说，我想问：会不会有一种正面的经历可以创造一条正向的通道，引领我们得到更多健康、宁静和积极的回忆，也就是说和创伤后应激障碍正相反的反应。再重复一次：**勤问必有所得，求索始于追问**。当我问出这个问题，在我眼前立马开启了一条我前所未见的通道。这就是我多年来一直钻研其中的我心目中的最伟大的知识分子马斯洛提出的**“高峰体验理论”。**我现在要说的这个理论更多的是一种假设性理论，而未经过实证的。我希望你们当中有人能将这个假设性理论当成论文课题研究，或者以后能鼓励别人研究这个理论。我在这个课上讲的理论都是经过大量研究证实的，只有这个领域是假设性的，但还是请大家听一下，我讲完后，请好好想想这个假设性理论。因为虽然是有一些相关研究，但是不多，不足以证实其真实性。但还是请大家想想看它有没有道理。
+我们现在要讨论三个截然不同却又相互连结的通向变化的途径——这就是我们之前提过的“心理学ABC理论”。
 
-那么，让我们先了解一下什么是高峰体验。**马斯洛的定义是：最幸福的时刻，最令人心醉神迷欣喜若狂极乐体验的高度浓缩。我发现这种体验一般来自于深度美学体验，包括创作时的喜悦、爱情、完美的性体验、为人父母、自然分娩以及其他的人生体验。**每个人或是绝大多数人都有这种体验。这种高峰体验，不管是你的男女朋友在一起的时候还是在读一本好书的时候，还是在听你最爱的音乐的时候，这种体验就好像……嗯，许多神学家会说宗教体验，信仰体验。比如当你走在花园里，突然你看到了约翰哈佛（铜像），也许不是他，总之是一种集之大成的体验。这种体验就是人们所说的“禅”。与现在连接起来感觉是如此美好如此完整，好像你已经完满了，拥有了一切。我和家人在一起的时候就有这样的体验。昨天晚上我和亲朋好友一起吃晚餐，你们知道吗，当我们围坐在一起，我感觉这就是了，夫复何求；感觉如此完整，享受当下，这就是高峰体验。但是这种体验一般不会长久，是会消逝的，它只存在于高峰一刻。但是它是有震荡效应的。
+- **ABC理论——A代表情感，情绪；B代表行为，行动；C代表认知，思维。**
+
+- 我们会分别讲这三个元素。
+
+- 在分别讲这三个元素的时候我们会谈到渐进式变化和突发式变化。
+
+- 可以说我们用两种方法解释三元素
+
+  - 情感、行为、认知乘以渐进式和突发式，一共有六种变化的方式。
+
+- 这六种方式彼此相通，把它们联系起来很重要。
+
+- 我们希望能三者兼得。为什么呢？
+
+  - 引用一句我们提过多次，以后也会再提的名言，Dryden和Poet说的
+
+  - > 为了能改变习惯，产生永久性的变化，我们不仅需要一种稳定的变化模式，也同样需要一种外部介入的力量。
+
+  - 仅仅把注意力放在情感上是不够的，放在行动上也是不够的，放在思维上也是不够的，**我们要对三元素同时下功夫——A B和C三元素。**
+
+  - 大家可以想想看，就好像我们把习惯看成一股洪流，一股我们思维的洪流。这股洪流是由来自不同通路的神经元构成的。我们现在要做的是对抗这股洪流。为了做到这点，我们需要足够大的外力，因此我们要尝试尽可能多的方法。
+
+在我们讲A元素之前，我再问一个问题：我们想改变什么？我们能改变什么？不能改变什么？
+
+以Lyubomirsky Diener等人为首的，在我们试图分析一个人的幸福感时，我们需要研究三个因素。
+
+> 总结：遗传(50%)、外部环境(10%)和意向活动(40%)
+
+- **第一个因素是遗传排列**，不是遗传点，而是排列。
+
+- 我们都生来具备一些特定的快乐和健康倾向性体质。有些人生来就是一张笑脸，嘴里含着“笑汤匙”。另一些人则不然。我们都排列在这条钟形曲线上，有些人注定比其他人更幸运。我之前也提过几次
+
+- 我就没那么走运。我一出生就在曲线上偏焦虑的那一端，嘴里也没含着快乐的小汤匙，但我的天性令我有资格教这门课，因为我通过努力和各种尝试改变了自己的人生。
+
+- 我可以谈个人的经验，因为我有过那样的经历。
+
+- 现在有些人可能会说……对此我想说：
+
+- > 这不是什么好事，也不是坏事，这只是既定事实。就好像万有引力，无所谓好坏。想要支配天性，必先服从天性。**我们要认识自己的天性，理解，并充分善用这些天性。**
+
+
+
+- 我们健康中和快乐相关的指数差异有50%并不是由遗传所决定的。
+  - 当然遗传基因是有影响的。
+    - 比如双胞胎研究的案例。
+    - 为什么有很多对双胞胎在长期分离的情况下彼此之间仍有那么多相似之处？因为遗传决定的。
+  - 这作用无所谓好坏，也不是百分之百由它决定，感谢上帝，只有差异中的50%。
+  - 我们应该随时牢记：
+    - **对于如何运用这些基因，我们是有很多的支配能力的**
+      - 我并不知道确切的数据。
+      - 成功的篮球运动员50%是由遗传基因决定的。
+        - 比如肌肉里有多少快肌纤维和慢肌纤维，或者能跳多高，协调性如何，身高多少，这些都很重要。
+      - 但是如果迈克尔乔丹从没练过篮球，我应该能比他打的好。
+      - 如果他从没练过的话，而且我的确练过
+      - 换句话说，在遗传作用的前提下不去努力争取幸福的人，即便他们有最好的遗传基因，也不会比基因不如他们但努力争取的人快乐。
+      - **所以说后天努力至关重要。**
+
+- **第二个对快乐差异指数有影响的因素是外部环境。**
+  - 当然了，外部环境很重要。
+  - 我们生活在一个自由的国度，还是受人压迫，带来的结果是完全不同的。
+  - 但总的来说，外部环境只要不过于极端
+    - 比如无家可归流浪街头
+  - 其实影响不大在差异方面只有10%的作用。
+  - 因此，遗传作用50%，外部环境包括居住地、包括收入、天气等等, 我现在说的是大部分人，不包括有季节性情感异常的人。
+  - 因此除去极端案例，外部环境的作用不大，大概是10%。
+
+- **第三点，剩下的40%是由意向活动决定。**【有点像认知】
+  - **意向活动包括我们的所作所为所想，我们对世界的诠释和我们关注的焦点。**
+  - 简而言之，就是这门课的内容
+  - 包括我们从第一节课开始讨论的内容以及下半学期我们将要讨论的内容，这些意向活动
+  - 我们关注的焦点其实就是我们的ABC。
+  - 这也是产生有意义的变化的根源，是我们将要关注的重点。
+  - 如果我们能改变遗传基因当然很好，是很好，但是不可能。
+  - 如果我们能更好的控制外部环境当然很好，但是即便是我们能控制，结果也不会被改变。
+  - 虽然在场的或是在家看视频的人中有很多的确能更好的控制外部环境，能改变结果的
+  - **能被我们所掌控的是内部活动，是我们对世界的诠释和我们的行动。**
+  - 好，现在我们就开始讲这部分的内容。
+
+--------
+
+**A——情感、情绪，是一种连接，更多的是从逻辑上，语言上将情感、动力、动作连接起来。**
+
+- 情感让人感动。没有情感我们将寸步难行。
+
+- 你们在书中读到了，或者之后会读到关于Elliott的故事。
+
+  - Elliott失去了情感功能，并随之丧失了行动做事的所有动力，尽管他还有认知能力。
+
+  - 我们要行动就必须要情感。
+
+  - 现在我要从两个方面谈情感。
+
+    - 首先是渐进式变化；之后是突发式变化。
+
+  - 渐进式变化是一种专注冥想。
+
+  - 专注冥想可以带来安宁沉静，被认为是最有效的疗法，有很多与其相关的研究，我们之后会用一周的时间讲专注冥想，今天我只想做一个简单的介绍，讲一下**专注力的螺旋曲线**。
+
+    - “对专注力的培养可以引领我们发现身心纾缓，自身宁静和洞察力的最高深的境界，而通向这个境界的路径恰恰就在于你自身。
+
+    - 这就是专注力的奇妙之处。
+
+    - 那些研究结果是多么令人难以置信，它们仅仅通过专注于呼吸和身体的某个部位，通过亲临现场改变了我们的思维方式，改造了我们的大脑。
+
+    - 所有人都有专注的能力，关键在于开发我们在此时此刻全神贯注的能力。
+
+    - 让我们花一两分钟体验一下这种感觉。
+
+      - 下面我想请大家做一个联系——还是那句话，如果你愿意做就做。
+
+      - 请大家在椅子上坐好，将后背靠在椅背上，尽量坐舒服了，两脚放松平放在地上
+
+      - 如果你愿意的话闭上双眼，现在把注意力放在你的呼吸上。
+
+      - 深吸一口气，吸至丹田，慢慢的、静静的、轻轻的呼气，再次慢慢的深吸一口气直至丹田，慢慢的轻轻的静静的长长的呼出来。
+
+      - 如果你的思绪飘走了，把它放回到呼吸上来。
+
+      - 现在想象你在脑中观察自己的身体
+
+        - 你的前额、眼睛、鼻子、嘴、脖子、胸膛、你的后背、腰、双腿，一直向下，直到你的双脚。
+
+        - 上下观察你的身体，同时继续深深的慢慢的轻轻的呼吸。
+
+        - 在你打量自己的时候，寻找身上的一个部位，它比其它部位更紧绷
+
+          - 可能是你的下巴，脖子，可能是你的肩膀，你的胃部；
+
+        - 你感到这个部位有些不适
+
+          - 可能是你的腿，膝盖，双脚
+
+        - 找到这个部位，它比其它部位更紧绷，把注意力放在这个部位上
+
+        - 继续呼吸，深吸一口气，将气引至那个部位，
+
+        - 然后在你放松呼气的时候把那种紧绷感也呼出去，放松；
+
+        - 多深吸几口气至该部位然后放松，呼气，重新将注意力放在呼吸上；
+
+        - 深吸一口气，慢慢的轻轻的静静的长长的呼气，同时放松；
+
+        - 深吸一口气，慢慢的轻轻的长吐出来。在下次呼气之后轻轻的慢慢的静静的睁开你的双眼。
+
+          
+
+- 《**情感炼金术**》一书中写道：**专注力意味着看到事物的本来面目，而不是试图去改变它们；关键是要消解我们，这就是所谓做人的权利。**
+
+- > 随着情绪感受情绪，在这个过程中呼吸吐纳，虽然不一定总会这样，但是很多时候，如此一来情绪就消解了
+
+- 随着这种情绪的消解，令人痛苦的情感也得到了心理解离。
+
+- 这就是渐进式的变化。
+
+- 即便这种渐进式变化只是短短的8周的日常冥想，我们的大脑也会开始改变形状，我们的免疫系统得到增强；
+
+- **即便只有短短8周的日常冥想，而且不一定是一天5小时的冥想，有时候就是一天30或20分钟已经足以带来变化。**
+
+- 这个过程是循序渐渐的，缓慢的，希望大家可以用一生去实践。这是一个终身疗法。
+
+  
+
+**下面的例子是从突发变化的角度分析我们的情感**。
+
+- 有成千上万的文章，都是关于创伤后应激障碍。
+- 非常突然的变化，因为实际上当我们有创伤之后，很多人的一生因为创伤后应激障碍而从此改变了。
+- 它实际上改变了我们大脑中的化学物质；
+  - 它改变了我们大脑的结构，建立了新的神经通路，破坏了很多以前的神经通路，全都是因为一个单独的经历，就像是大锤一挥。
+- 很不幸的是这是一个非常常见的疾病。
+  - 30%的越南战争老兵有创伤后应激障碍，30%之多；
+  - 80%的第一次海湾战争老兵有创伤后应激障碍。
+  - 在911之前，在纽约110号大街以南，有两万人有创伤后应激障碍。
+  - 911刚刚过去之后有6万人有创伤后应激障碍。
+- 这对人是有影响的，影响了我们的大脑功能，这种影响很多时候是终其一生的。
+- 这就是突发式的变化，伴随着创伤而来
+- 这是一种休克疗法，消极的休克疗法。
+
+首先，从1998年起开始有很多关于创伤后成长的研究。
+
+- 研究发现：**实际上更多的人在经历创伤后得到的是成长而不是应激障碍。**
+- **然而，没人提起创伤后成长。每个人都知道创伤后应激障碍，但是再次说明了这又是一个关于人们不愿去关注正面事物的案例。**
+- 如何正面呢？
+  - 就是大部分人其实是非常有能力去承受创伤的。
+  - 这是一个非常振奋人心的事实。如果人们知道这是可能实现的，是常见的，如果人们不会对经历创伤后成长感到愧疚，那么我们就会有更多自我实现的预言，也会有更多人拥有创伤后成长的经历。
+  - 在我经历了越南战争之后有了那样的所见所闻，我怎么会成长呢？这是不对的。再说一次：**世事总有不幸，但是有些人能尽量从世事中受益**。
+  - **当人们开始关注事情带来的益处时，就会产生创伤后成长。**(改变关注点就可以带来成长)
+
+那么创伤能带来什么好处呢——发生这种事终归是不幸的。
+
+- 比如，我从患癌症这件事上学到什么呢——
+
+  - 和家人的关系更亲密；更珍惜生命；更珍惜花草自然；更享受和朋友在一起的时光。
+  - **这件事这就是价值发现**。
+
+- 再或者，很多人能在写日记的时候得到启示。
+
+- 再或者，有些人能够分享创伤经历。
+
+  - 还记得二战大屠杀的幸存者和越战老兵之间的区别吗？
+
+  - 对于不幸的经历，大屠杀的幸存者拿来分享讨论，把它写出来；
+
+  - 越战老兵则只是反复去想。
+
+  - 【笔记:这两者之间有巨大的不同，分享讨论写出来，可以有所价值发现，有所成长】
+
+    
+
+回到我们之前说的Lyubomirsky的研究。
+
+- 当你只想不说，不把心里话倒出来，它会积压在心里，更容易形成创伤后应激障碍。
+- 并不一定要这样。了解创伤后成长的好处是至关重要的。
+- 那么现在我向大家提一个问题。既然这是讲幸福心理学的课程，大家应该还记得幸福心理学关注的是有用的有效的事物，因此在备课的时候，我问了自己一个问题：有没有一个正面的和创伤相对应的元素——它的效果强大，但同时是正面积极的，并最终能像猛击大锤一样瞬间改变我们大脑的运作模式？
+- 我想问：会不会有一种正面的经历可以创造一条正向的通道，引领我们得到更多健康、宁静和积极的回忆，也就是说和创伤后应激障碍正相反的反应。
+- 再重复一次：**勤问必有所得，求索始于追问**。
+- 当我问出这个问题，在我眼前立马开启了一条我前所未见的通道。这就是我多年来一直钻研其中的我心目中的最伟大的知识分子马斯洛提出的**“高峰体验理论”。**
+- 我现在要说的这个理论更多的是一种假设性理论，而未经过实证的。
+- 我希望你们当中有人能将这个假设性理论当成论文课题研究，或者以后能鼓励别人研究这个理论。我在这个课上讲的理论都是经过大量研究证实的，只有这个领域是假设性的，但还是请大家听一下，我讲完后，请好好想想这个假设性理论。因为虽然是有一些相关研究，但是不多，不足以证实其真实性。但还是请大家想想看它有没有道理。
+
+> 高峰体验理论
+
+- 那么，让我们先了解一下什么是高峰体验。
+- **马斯洛的定义是：最幸福的时刻，最令人心醉神迷欣喜若狂极乐体验的高度浓缩。**
+- **我发现这种体验一般来自于深度美学体验，包括创作时的喜悦、爱情、完美的性体验、为人父母、自然分娩以及其他的人生体验。**
+- 每个人或是绝大多数人都有这种体验。
+  - 这种高峰体验，不管是你的男女朋友在一起的时候还是在读一本好书的时候，还是在听你最爱的音乐的时候，这种体验就好像……嗯，许多神学家会说宗教体验，信仰体验。
+  - 这种体验就是人们所说的“禅”。
+  - 与现在连接起来感觉是如此美好如此完整，好像你已经完满了，拥有了一切。我和家人在一起的时候就有这样的体验。
+  - 昨天晚上我和亲朋好友一起吃晚餐，你们知道吗，当我们围坐在一起，我感觉这就是了，夫复何求；感觉如此完整，享受当下，这就是高峰体验。
+  - 但是这种体验一般不会长久，是会消逝的，它只存在于高峰一刻。但是它是有震荡效应的。
 
 现在，也许你们已经知道我接下来要说什么了。**当我想到高峰体验的时候，我发现它也许，只是也许，和创伤带来的影响是同等的。也许它是一种喜悦式的休克疗法，能够带来超越体验本身的效果，就好像创伤后应激障碍一样。**
 
-时至今日，仍有人活在911的回忆中，这些回忆仍然影响着他们的大脑，创造着新的通道，新的神经通路，01年9月11日之前并不存在的通路。所以说**高峰体验是一种喜悦式的休克疗法**。如果它反面对应的是创伤，那么**和创伤后应激障碍对应的**就是——我管它叫**高峰体验后通路**。我知道是土了一点，但是我觉得是有道理的。相关的研究其实很少，但是我认为这理论是有效的。其中一个研究，她研究的是生过小孩的妇女。她发现在一些时候——这种情况并不是大多数，妇女有时候在生小孩的时候会有高峰体验，这种体验改变了她们的人生。体验带来的后果是——她们变得更自信、更宽容、更友善、更快乐，一切都源于一个单独的人生体验，一种喜悦休克疗法。这种体验发生在她们身上，对她们意义非凡。这个实验是在50年代初期做的，或者是晚期，不对，确实是50年代初。
 
-现在这种情况对于男士也更常见了。因为现在的男士比起以前更可能……David出生的时候我当场喜极而泣。对于我来说那是一种非常强烈的体验，绝对是一种高峰体验。下面是马斯洛对于高峰体验的阐释。他没明白说就是高峰体验后通路，但是也算是一种暗示。“效果等同于心理疗法，前提是体验者目标明确，有自知之明，并且清楚自己的方向。一方面，我们当然可以只讨论怎么分解症状，怎么老调重弹，分解焦虑或其它问题；另一方面，我们还可以去探讨怎么培养自主性和勇气，怎么培养奥运选手，幽默感诸如此类，感知认识，身体感知和其它。”所以他的意思是说——如果我们做一些事后跟进的工作，那么会产生一些具有影响力的效果，而不仅仅是高峰体验。W. James在《宗教经验多样化》一书中谈到改变人生的时刻，以及它们怎样改变人生。高峰体验可以创造新的大脑结构，虽然相关问题仍待研究，但已有越来越多的迹象显示这是有迹可寻的。如果我们知道该怎么做，高峰体验可以产生和创伤相对应的正面效应。下次我们会详细讲这部分的内容。
+
+所以说**高峰体验是一种喜悦式的休克疗法**。如果它反面对应的是创伤，那么**和创伤后应激障碍对应的**就是——我管它叫**高峰体验后通路**。
+
+我知道是土了一点，但是我觉得是有道理的。相关的研究其实很少，但是我认为这理论是有效的。
+
+- 其中一个研究，她研究的是生过小孩的妇女。
+- 她发现在一些时候——这种情况并不是大多数，妇女有时候在生小孩的时候会有高峰体验，这种体验改变了她们的人生。
+- 体验带来的后果是——她们变得更自信、更宽容、更友善、更快乐，一切都源于一个单独的人生体验，一种喜悦休克疗法。
+- 这种体验发生在她们身上，对她们意义非凡。这个实验是在50年代初期做的
+
+
+
+下面是马斯洛对于高峰体验的阐释。
+
+- 他没明白说就是高峰体验后通路，但是也算是一种暗示。
+- “效果等同于心理疗法，**前提是体验者目标明确，有自知之明，并且清楚自己的方向。**
+- 一方面，我们当然可以只讨论怎么分解症状，怎么老调重弹，分解焦虑或其它问题；另一方面，我们还可以去探讨怎么培养自主性和勇气，怎么培养奥运选手，幽默感诸如此类，感知认识，身体感知和其它。”所以他的意思是说——如果我们做一些事后跟进的工作，那么会产生一些具有影响力的效果，而不仅仅是高峰体验。W. James在《宗教经验多样化》一书中谈到改变人生的时刻，以及它们怎样改变人生。高峰体验可以创造新的大脑结构，虽然相关问题仍待研究，但已有越来越多的迹象显示这是有迹可寻的。如果我们知道该怎么做，高峰体验可以产生和创伤相对应的正面效应。下次我们会详细讲这部分的内容。
 
 现在我们要说一个很关键的问题。**首先，我们会有高峰体验吗？我们能有更多的高峰体验吗？其次，在我们经历了高峰体验之后，我们怎样做才能获得高峰体验后通路？**因为正如同并不是所有人都会经历创伤后应激障碍一样（事实上大部分人没有）同样，大部分人在高峰体验过后并未获得高峰体验后通路。怎样增加首先是高峰体验发生的概率，其次是高峰体验后通路的概率？因此，**怎么增强高峰体验？**这堂课基本上讲的就是关于这个内容。现在我要讲几个概念。当中有我们以前讲过的，也有之后要讲的。
 
