--- a/7.md
+++ b/7.md
@@ -1,6 +1,14 @@
 \[第7集\] 逆境还是机遇？（这些是引子，我需要自己主动去探索其中所讲的内容）
 
-要把自我实现预言的信念讲完，并开始讲下一课。关于专注，和专注如何创造现实。我们上一课讲到哪里？我们讲到Ren，和其他的一些事。我们讲到模型Dan Gilbert的模型Philip Brickman模型。**成功或失败过后，会有大起大落，但我们会恢复过来，我们一生基本沿基准的幸福发展，其中有起伏和变迁。**所以问题是：或说有好消息也有坏消息，我们能冒更多风险，也更容易回到基准线上，失败往往。虽然不是所有的失败，往往只是使幸福水平暂时的下降，还有自尊水平。然后会迅速回升，那我们为什么要努力寻求幸福呢？而答案，这整个课程本质上就是对它进行回答。
+摘录
+
+
+
+----
+
+要把自我实现预言的信念讲完，并开始讲下一课。关于专注，和专注如何创造现实。
+
+成功或失败过后，会有大起大落，但我们会恢复过来，我们一生基本沿基准的幸福发展，其中有起伏和变迁。所以问题是：或说有好消息也有坏消息，我们能冒更多风险，也更容易回到基准线上，失败往往。虽然不是所有的失败，往往只是使幸福水平暂时的下降，还有自尊水平。然后会迅速回升，那我们为什么要努力寻求幸福呢？而答案，这整个课程本质上就是对它进行回答。
 
 我们如何提升基准水平？一个方法是去面对，把自己置于风险之上，我们这么做的原因，是因为这样能产生积极的影响。结果，幸福基准会上升，意思是仍然有起有落，但起伏是像这样斜线上升的，而不是在一条直线上或者平行线上徘徊。我们去面对时能想象我们的行动，想象自己在努力，通过自我知觉理论，我们对自己做某种总结：我一定很勇敢，我一定是自尊心强的人，我一定是非常渴望成功的人等等。然后我们给自己做出的结论，就像我们给他人的结论一样。这就是自我知觉理论。第二个原因是一旦我们经常经历失败，我们脑中想象的失败的痛苦，比实际的痛苦要多得多。也许不是即时的，而是稍后才感受到。当我们恢复后，就知道我能应付它。我一定是一个有适应力的人，最终，努力去面对后会有更多成功，学习失败，或在失败中学习，成功没有其他途径。
 
