--- a/9.md
+++ b/9.md
@@ -1,14 +1,46 @@
 **\[第9集\] 积极情绪 ** 	
 
-首先我想向进修学院的同学问声好，每天都有350名学生观看讲座，我想向他们问声好。我想特别邀请进修学院的同学，及在座的各位来听谦逊的Tal，他没告诉我们他上了《60分钟时事杂志》，但没关系，但周六晚上，Tal将担任女子队，荣誉篮球教练。周六晚七点对抗Cornell大学队，那是本赛季最重要的比赛，六点吗？周六晚六点，本赛季最重要的比赛，希望能见到在座的每一位，及进修学院的同学去观赛。进修学院的同学们，我有免费票给你们，有一百张票，以示敬意。我们有可敬的同学和可敬的球队，著名的Kathy Delaney-Smith，获奖的国内最著名的教练。女子篮球队也在这里，上来，这就是可敬的同学们，上来，她们害羞，来吧，上来，见见大家！我会和所有朋友和家人去观战，Tal会在你们的手上签名，好，准备好了吗？
 
-学生：”好了！”
 
-这是最重要的比赛，她们是去年的长青藤联盟冠军。好，把礼物扔出去吧，扔出去吧！扔！快扔，快扔！好的！谢谢你们！谢谢！周六见！祝你们好运！谢谢！好！这不是我安排的，好啦，好的，身上还有别的东西吗？好，谢谢你们，也感谢你们，我们继续谈“感激”那么…上次课结束时我讲到我的榜样，我的一个典范，比任何人都重要，一个真正的积极者当我谈到我的祖母时，我说…我告诉你们她并不无视无益的东西，**她并不无视邪恶、坏的、生命中消极的东西，但同时，她也拒绝无视积极的东西。换言之，她坚持保持现实，现实地生活，与周遭保持联系。当周遭充满邪恶的坏的东西，她与之保持联系，与此同时，她也与好的东西保持联系。**积极者不是盲目乐观的人，区别很大，我们上次提出的问题，我想以“**感激**”结束今天的讲座。然后开始讲“**改变**”。
+摘录
 
-第一是，**为什么没有更多的积极者？为什么没有更多的人保持乐观？**大家看到研究，人们活得更长、更快乐、更健康、更成功，为什么不是人人都是积极者？为什么我们不都是乐观主义者？如果它是有回报的，用终极货币形式，以幸福来回报，也用硬货币来，以成功来回报？为什么没有更多的积极者？问题的答案，在很大程度上，是因为媒体的原故。**媒体正在放大，聚焦，放大消极的东西，使其最大化，由它占据整个屏幕、整个版面，同时最小化积极的东西。**在很多方面，**媒体把我们变成消极者**，而我们需要反击，如何反击？宏观层面上可以收看好的新闻频道，微观层面上可以培育富有启发性的艺术，艺术在历史进程中改变了世界。不论是在黑暗年代，在向文艺复兴过度的时期，或者是在18和19世纪兴起的浪漫艺术家，都致力于铺设通向自由之路。亦或是上世纪三四十年代，好莱坞的复兴，带给人们更多希望，艺术扮演着非常重要的角色，希望能继续如此。然后我们谈到大的层面，宏观层面、在微观层面上，我们谈到不要坐等坏事发生，不要等悲剧，或等外界有事发生，我们才知感激。
+> 问题的答案，在很大程度上，是因为媒体的原故
 
-因为我们感激，就其定义而言，就是不以某事为理所当然，我们还分享了有关“感激”的文章及研究。做这个修习的关键，正如我所说，我每天都在做，从1999年九月19日开始。**每一天，都进行信仰修习，修习的关键，不将此修习视为理所当然，是一直保持新鲜感。**如果你想每周做一次，每周一次用心去做，比每天去做并将之视为理所当然要好。好的，做过了，但**最理想的是每天做，因为每天去做才能养成习惯，那样才能改变思维。**每天去做的话，关健是要有变化，每天思考不同的方向，思考家人的不同方面，如果你每天都给家人写信，一周讲述工作，下一周写家庭，每次都要用心，专注以前没有注意过的事情，发现新的特点，Ellen Langer如是说。并在脑中想像，当你想到你的女或男朋友，书写感激之情时，在脑海中想像他们。当你想到，刚在食堂吃过的一顿美味可口的饭时，想它，在脑海中想像，让它变得尽可能真实。孩子就是这样思考，所以孩子们每天都感觉新鲜，他们不把任何东西视为理所当然，他们视生命为奇迹。爱默生曾经说过“**如果星星每千年闪烁一次，我们都会仰视赞美这个世界的美丽，但是因为它们每天都在闪烁，我们将之视为理所当然**”。
+- **媒体正在放大，聚焦，放大消极的东西，使其最大化，由它占据整个屏幕、整个版面，同时最小化积极的东西。**
+
+> 修习的关键，不将此修习视为理所当然，是一直保持新鲜感。
+
+
+
+-------
+
+…上次课结束时我讲到我的榜样，我的一个典范，比任何人都重要，一个真正的积极者，当我谈到我的祖母时，我说…我告诉你们她并不无视无益的东西，**她并不无视邪恶、坏的、生命中消极的东西，但同时，她也拒绝无视积极的东西。换言之，她坚持保持现实，现实地生活，与周遭保持联系。当周遭充满邪恶的坏的东西，她与之保持联系，与此同时，她也与好的东西保持联系。**
+
+积极者不是盲目乐观的人，区别很大，我们上次提出的问题，我想以“**感激**”结束今天的讲座。然后开始讲“**改变**”。
+
+第一是，**为什么没有更多的积极者？为什么没有更多的人保持乐观？**
+
+- 大家看到研究，人们活得更长、更快乐、更健康、更成功，为什么不是人人都是积极者？
+- 为什么我们不都是乐观主义者？
+- 如果它是有回报的，用终极货币形式，以幸福来回报，也用硬货币来，以成功来回报？为什么没有更多的积极者？
+- **问题的答案，在很大程度上，是因为媒体的原故。**
+  - **媒体正在放大，聚焦，放大消极的东西，使其最大化，由它占据整个屏幕、整个版面，同时最小化积极的东西。**
+  - 在很多方面，**媒体把我们变成消极者**，而我们需要反击，如何反击？
+    - 宏观层面上可以收看好的新闻频道
+    - 微观层面上可以培育富有启发性的艺术
+      - 艺术在历史进程中改变了世界。
+      - 不论是在黑暗年代，在向文艺复兴过度的时期，或者是在18和19世纪兴起的浪漫艺术家，都致力于铺设通向自由之路。亦或是上世纪三四十年代，好莱坞的复兴，带给人们更多希望，艺术扮演着非常重要的角色，希望能继续如此。
+    - 然后我们谈到大的层面，宏观层面、在微观层面上，我们谈到不要坐等坏事发生，不要等悲剧，或等外界有事发生，我们才知感激。
+
+因为我们感激，就其定义而言，就是不以某事为理所当然，我们还分享了有关“感激”的文章及研究。
+
+做这个修习的关键，正如我所说，我每天都在做，从1999年九月19日开始。**每一天，都进行信仰修习，修习的关键，不将此修习视为理所当然，是一直保持新鲜感。**
+
+如果你想每周做一次，每周一次用心去做，比每天去做并将之视为理所当然要好。
+
+但**最理想的是每天做，因为每天去做才能养成习惯，那样才能改变思维。**每天去做的话，关健是要有变化，每天思考不同的方向，思考家人的不同方面，如果你每天都给家人写信，一周讲述工作，下一周写家庭，每次都要用心，专注以前没有注意过的事情，发现新的特点，并在脑中想像，当你想到你的女或男朋友，书写感激之情时，在脑海中想像他们。当你想到，刚在食堂吃过的一顿美味可口的饭时，想它，在脑海中想像，让它变得尽可能真实。孩子就是这样思考，所以孩子们每天都感觉新鲜，他们不把任何东西视为理所当然，他们视生命为奇迹。
+
+爱默生曾经说过“**如果星星每千年闪烁一次，我们都会仰视赞美这个世界的美丽，但是因为它们每天都在闪烁，我们将之视为理所当然**”。
 
 在孩子眼中不存在理所当然，其中的一个原因，是因为他们不会自动地概念性地思考。他们的思维是感知感性的，他们和现实保持联系，通过在脑海中想像，我们就能做到，这项杰出研究完成于这里，就在William James大楼的八楼。做到“感激”，及实现即将谈到的“**改变”的关键**，我们会用超过两次讲座专门谈“改变”，利用今天和下周整周，**关键是去做，亲力亲为，没有捷径**。不是因为你们听了有关“感激”的讲座，你们理解，你们真正理解积极者的含义，那不会…仅仅理解不会让你成为积极者，你需要去做，需要去经历，只有这样，经过一段时间，你才能开始越来越多地看到世界的积极方面，才能反击当下禁锢着。大多数人的思维方式，也就是消极者的思维。**William James在1890年，说过需要21天改变一个习惯，可能有点过于乐观，可能需要更长时间，但不妨尝试21天，看会怎样。**有些人，我知道有些人已经在上次课后开始尝试，有些人立即见到益处，当然益处可能会消失，然后又在六个月后出现。但尝试一下，起码尝试21天或一个月，这也是你们下周的任务，作为每周任务的一部分。
 
